--- a/src/app/install-fee-washing/install-fee-washing.component.html
+++ b/src/app/install-fee-washing/install-fee-washing.component.html
@@ -1,26 +1,30 @@
 <body>
-
-
     <div>
+        <mat-icon class="cancelBtn" mat-dialog-close>cancel</mat-icon>
         <h1 class="airconrepair">Washing Machine Installation</h1>
         <h2 class="airconfee">Checkup Fee: Php 200</h2>
         <h2 class="airconfee">Top Load: Php 950</h2>
         <h2 class="airconfee">Front Load: Php 950</h2>
         <h2 class="airconfee">Twin Tub: Php 950</h2>
         <h1 class="cleaningservice1">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Set unit in your preferred location
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Set unit in your preferred location</label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Remove manufacturer loading screws
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text">Remove manufacturer loading screws</label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Adjust leveling feet
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Adjust leveling feet</label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Connect plumbing and water hose
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Connect plumbing and water hose</label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Setup drain hose and drain pan
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Setup drain hose and drain pan</label>
         </h1>
     </div>
 </body>
