--- a/src/app/install-fee/install-fee.component.html
+++ b/src/app/install-fee/install-fee.component.html
@@ -1,7 +1,6 @@
 <body>
-
-
     <div>
+        <mat-icon class="cancelBtn" mat-dialog-close>cancel</mat-icon>
         <h1 class="airconrepair">Installation Fee</h1>
         <h2 class="airconfee">Window Type: Php 1,100</h2>
         <h2 class="airconfee">Split Type: Php 8,500</h2>
@@ -10,16 +9,16 @@
         <h2 class="airconfee">Suspended Type: Php 11,500</h2>
         <h2 class="airconfee">Concealed Type: Php 11,500</h2>
         <h1 class="cleaningservice1">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> New bracket/platform (up to 6ft height)
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> New bracket/platform (up to 6ft height) </label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> New circuit breaker & electrical wire
-            from
-            Indoor to Outdoor unit
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> New circuit breaker & electrical wire from Indoor to Outdoor unit</label>
         </h1>
         <h1 class="cleaningservice2">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Free 10ft copper piping (+Php 450 per
-            additional foot, 5ft min)
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text"> Free 10ft copper piping (+Php 450 per additional foot, 5ft min)</label>
         </h1>
     </div>
 </body>
