--- a/src/app/repair-fee/repair-fee.component.html
+++ b/src/app/repair-fee/repair-fee.component.html
@@ -3,18 +3,15 @@
         <mat-icon class="cancelBtn" mat-dialog-close>cancel</mat-icon>
         <h2 class="airconfee">Checkup Fee</h2>
         <h2 class="airconfee2">Php 200</h2>
-        <p class="aircondescrip">Technician diagnoses the problem
-            and quotes you a final repair price. No hidden or extra fees.</p>
-        <p class="aircondescrip2">If you decide to proceed with the repair,
-            your total costs will include the checkup fee and labor. If you
-            decline the repair, please pay our technician this checkup fee.</p>
+        <p class="aircondescrip">Technician diagnoses the problem and quotes you a final repair price. No hidden or extra fees.</p>
+        <p class="aircondescrip2">If you decide to proceed with the repair, your total costs will include the checkup fee and labor. If you decline the repair, please pay our technician this checkup fee.</p>
         <h1 class="repairservice1">
-            <mat-icon class="text_icon"><b>done</b></mat-icon>Full diagnosis of the unit problem
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text">Full diagnosis of the unit problem</label>
         </h1>
         <h1 class="repairservice1">
-            <mat-icon class="text_icon"><b>done</b></mat-icon> Full on-site repair quotation
+            <mat-icon class="text_icon"><b>done</b></mat-icon>
+            <label class="text">Full on-site repair quotation</label>
         </h1>
-
-        
     </div>
 </body>
