--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -15,11 +15,12 @@
         <label class="toolbarBtn" routerLink="/about_us">About Us</label>
         <div *ngIf="token != null; else notLogin">
             <label class="toolbarBtn" routerLink="/dashboard">Home</label>
-          </div>
-          <ng-template #notLogin></ng-template>
-          <span class="spacer"></span>
-          <div *ngIf="token != null; else notLogin1"></div>
-          <ng-template #notLogin1><button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button></ng-template>
+        </div>
+        <ng-template #notLogin></ng-template>
+        <span class="spacer"></span>
+        <div *ngIf="token != null; else notLogin1"></div>
+        <ng-template #notLogin1><button mat-raised-button class="loginBtn" routerLink="/login">Login / Sign Up</button>
+        </ng-template>
     </mat-toolbar>
 
     <div>
