--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,452 +1,347 @@
-@media (min-width: 820px)
-{
-.sidenav-container {
-  height: 100%;
+@media (min-width: 820px) {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
+    .mat-toolbar {
+        background-color: #DD0346;
+        width: 100%;
+        height: 200px;
+        box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        float: left;
+        margin-top: 10px !important;
+        margin-left: 25px;
+    }
+    .nav-icon {
+        color: #003049;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+    mat-list-item {
+        background-color: transparent !important;
+    }
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 150px;
+        text-align: justify;
+    }
+    .dashboard-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .dashtitle {
+        color: #FFFFFF;
+        font-size: 25px;
+        float: left;
+        margin-left: 60px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 5px;
+    }
+    .dashtitle2 {
+        color: #FFFFFF;
+        font-size: 15px;
+        float: left;
+        margin-left: -270px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 35px;
+    }
+    .startBtn {
+        width: 120px;
+        height: 40px;
+        float: left;
+        margin-left: -270px;
+        margin-top: 80px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #FFFFFF;
+        color: #dd0346;
+        font-size: 13px;
+    }
+    .startBtn:hover,
+    .startBtn:active {
+        color: #003049;
+    }
+    .customervector {
+        width: 23%;
+        height: 15%;
+        float: right;
+        margin-right: 50px;
+        margin-top: -400px;
+    }
+    .customerinfo {
+        width: 1000px;
+        height: fit-content;
+        margin-left: 50px;
+        margin-top: 20px;
+    }
+    table,
+    tr,
+    td {
+        border: none;
+    }
+    .header {
+        font-size: 13px;
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border: none;
+    }
+    .content1 {
+        font-size: 15px;
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border: none;
+    }
+    .tab {
+        width: fit-content;
+        height: 500px;
+        margin-top: 50px;
+        margin-left: 50px;
+    }
+    .pendingcard {
+        width: 1000px;
+        height: fit-content;
+        margin-top: 15px;
+        border: solid 1px grey;
+    }
+    .searchfield {
+        height: 10%;
+        width: 30%;
+        font-family: 'Trebuchet MS';
+        float: right;
+        margin-top: -25px;
+    }
+    .request {
+        padding: 10px;
+        font-size: 15px;
+    }
+    .container {
+        width: fit-content;
+        height: fit-content;
+        float: left;
+    }
+    .cards {
+        width: fit-content;
+        height: fit-content;
+        display: flex;
+        justify-content: left;
+        margin: auto;
+        margin-left: 50px;
+    }
+    .card_txt {
+        font-size: 17px;
+        color: black;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        text-align: center;
+    }
+    .card_appliance {
+        width: fit-content;
+        height: fit-content;
+        margin: 5px;
+    }
+    .card_image {
+        width: 200px;
+        height: 150px;
+    }
+    .table {
+        width: 100%;
+        height: fit-content;
+        margin-top: 50px;
+    }
+    table {
+        width: 900px;
+    }
+    .header,
+    .header1,
+    td {
+        text-align: center;
+    }
+    .header1 {
+        color: grey;
+    }
+    .detailsBtn {
+        margin-top: 5px;
+        margin-left: 20px;
+    }
 }
 
-.sidenav{
-  width: fit-content;
-  width: 250px;
-  background-color: #FFFFFF;
-}
-
-.mat-sidenav-content{
-   height: 910px;
-   background-color: white;
-}
-
-.mat-toolbar{
-  background-color: #DD0346;
-  width: 100%;
-  height: 200px;
-  box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);
-}
-
-.logo
-{
-  max-width: 200px;
-  height: 100px !important;
-  float: left;
-  margin-top: 10px !important;
-  margin-left: 25px;
-  
-}
-
-.nav-icon{
-  color: #003049;
-  font-size: 28px;
-  margin-left: 20px;
-  margin-top: 15px;
-}
-
-mat-list-item
-{
-  background-color: transparent !important;
-}
-
-.dashboardside{
-  margin-left: 0px;
-  margin-top: 150px;
-  text-align: justify;
-}
-
-.dashboard-btn
-{
-  
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  margin-left: 20px;
-  margin-top: 25px;
-  text-decoration: none;
-}
-
-.dashboardside:hover
-  {
-    background-color: #D6B2BD;
-    border-radius: 20px;
-    width: 100%;
-    height: 70px;
-    text-align: center !important;
-  }
-
-
-.bookingside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.bookingside:hover
-{
-  background-color: #D6B2BD;
-  color: #FFFFFF;
-  border-radius: 20px;
-  width: 100%;
-  height: 70px;
-  text-align: center !important;
-}
-
-.booking-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  margin-left: 20px;
-  margin-top: 25px;
-}
-
-.profileside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.profileside:hover
-{
-    background-color: #D6B2BD;
-    border-radius: 20px;
-    width: 100%;
-    height: 70px;
-    text-align: center !important;
-}
-
-.profile-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  margin-left: 20px;
-  margin-top: 25px;
-}
-
-.logoutside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-
-.logout-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: -5px;
-  font-size: 16px;
-  margin-left: 20px;
-  margin-top: 25px;
-}
-
-.logoutside:hover
-{
-  background-color: #D6B2BD;
-    color: #FFFFFF;
-    border-radius: 20px;
-    width: 100%;
-    height: 70px;
-    text-align: center !important;
-}
-.spacer{
-  flex: 1 1 auto;
-}
-
-.headerimg
-{
-  margin-top: 3px !important;
-  width: 100%;
-  height: 250px;
-  
-}
-
-.customericon
-{
-  font-size: 80px;
-  color: grey;
-  margin-left: 30%;
-  margin-right: 40%;
-}
-
-.customername
-{
-font-size: 18px;
-color: #003049;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.dashtitle
-{
-  color: #FFFFFF;
-  font-size: 25px;
-  float: left;
-  margin-left: 60px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: 5px;
-}
-
-.dashtitle2
-{
-  color: #FFFFFF;
-  font-size: 15px;
-  float: left;
-  margin-left: -270px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin-top: 35px;
-}
-
-.startBtn
-{
-    width: 120px;
-    height: 40px;
-    float: left;
-    margin-left: -270px;
-    margin-top: 80px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #FFFFFF;
-    color: #dd0346;
-    font-size: 13px;
-}
-
-.startBtn:hover, .startBtn:active {
-    color:#003049;
-}
-
-
-
-.customervector
-{ 
-  
-  width: 23%;
-  height: 15%;
-  float: right;
-  margin-right: 50px;
-  margin-top: -400px;
- 
-}
-
-.customerinfo
-{
-  width: 1000px;
-  height: fit-content;
-  margin-left: 50px;
-  margin-top: 20px;
-}
-
-
-table, tr, td
- {
-   border: none;
- }
-
-.header
-{
-  font-size: 13px;
-  color: grey;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: none;
-}
-
-
-.content1
-{
-  font-size: 15px;
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: none;
-}
-
-
-
-.tab{
-  width: fit-content;
-  height: 500px;
-  margin-top: 50px;
-  margin-left: 50px;
-}
-
-.pendingcard
-{
-  width: 1000px;
-  height: fit-content;
-  margin-top: 15px;
-  border: solid 1px grey;
-}
-
-.searchfield
-{
-  height: 10%;
-  width: 30%;
-  font-family: 'Trebuchet MS';
-  float: right;
-  margin-top: -25px;
-}
-
-.request
-{
-  padding: 10px;
-  font-size: 15px;
-}
-.container{
-  width: fit-content;
-  height: fit-content;
-  float: left;
-}
-.cards{
-  width: fit-content;
-  height: fit-content;
-  display: flex;
-  justify-content: left;
-  margin: auto;
-  margin-left: 50px;
-}
-.card_txt{
-  font-size: 17px;
-  color: black;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
-}
-.card_appliance{
-  width: fit-content;
-  height: fit-content;
-  margin: 5px;
-}
-.card_image{
-  width: 200px;
-  height: 150px;
-}
-.table{
-  width: 100%;
-  height: fit-content;
-  margin-top: 50px;
-}
-table{
-  width: 900px;
-}
-.header, .header1, td{
-  text-align: center;
-}
-.header1{
-  color: grey;
-}
-.detailsBtn{
-  margin-top: 5px;
-  margin-left: 20px;
-}
-}
-
-@media (max-width: 576px)
-{
-  .logo{
-    width: 65%;
-    height: 15%;
-    padding-top: 10px;
-    margin-left: 30px;
-  }
-
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 20px;
-  position: center;
-  color: #FFFFFF;
-}
-
-.dashtitle
-{
-  color: #003049;
-  font-size: 20px;
-  margin-top: 40px;
-  float: left;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.welcome
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 13px;
-  margin-left: auto;
-  margin-top: 1px;
-  color: #FFFFFF;
-}
-
-.datetime
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #003049;
-  font-size: 15px;
-  float: right;
-  margin: auto;
-  margin-top: 43px;
-}
-
-.dashvector
-{ 
-  width: 80%;
-  height: 80%;
-  margin-top: 40px;
-  margin-left: 35px;
-}
-
-.tab{
-  margin-top: 50px;
-  margin-left: 10px;
-  width: 100%;
-}
-
-.pendingcard
-{
-  margin-top: 15px;
-  width: fit-content;
-  height: fit-content;
-  border: 2px solid #E5E5E5;
-}
-.searchfield
-{
-  height: 10%;
-  width: 30%;
-  font-family: 'Trebuchet MS';
-  float: right;
-  margin-right: 30px;
-  margin-top: -50px;
-  
-}
-
-.request
-{
-  padding: 10px;
-  font-size: 15px;
-}
-.completedcard
-{
-  width: fit-content;
-  height: fit-content;
-  margin-left: 20px;
-  margin-top: 15px;
-  border: 2px solid #E5E5E5;
-}
-
-.cancelledcard
-{
-  width: fit-content;
-  height: fit-content;
-  margin-left: 20px;
-  margin-top: 15px;
-  border: 2px solid #E5E5E5;
-}
-.table{
-  width: fit-content;
-  height: fit-content;
-  margin-top: 50px;
-}
-td{
-  text-align: center;
-}
-.detailsBtn{
-  margin-top: 5px;
-  margin-left: 20px;
-}
+@media (max-width: 576px) {
+    .logo {
+        width: 65%;
+        height: 15%;
+        padding-top: 10px;
+        margin-left: 30px;
+    }
+    .mat-toolbar {
+        background-color: #D62828;
+        width: 100%;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 20px;
+        position: center;
+        color: #FFFFFF;
+    }
+    .dashtitle {
+        color: #003049;
+        font-size: 20px;
+        margin-top: 40px;
+        float: left;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .welcome {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        margin-left: auto;
+        margin-top: 1px;
+        color: #FFFFFF;
+    }
+    .datetime {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 15px;
+        float: right;
+        margin: auto;
+        margin-top: 43px;
+    }
+    .dashvector {
+        width: 80%;
+        height: 80%;
+        margin-top: 40px;
+        margin-left: 35px;
+    }
+    .tab {
+        margin-top: 50px;
+        margin-left: 10px;
+        width: 100%;
+    }
+    .pendingcard {
+        margin-top: 15px;
+        width: fit-content;
+        height: fit-content;
+        border: 2px solid #E5E5E5;
+    }
+    .searchfield {
+        height: 10%;
+        width: 30%;
+        font-family: 'Trebuchet MS';
+        float: right;
+        margin-right: 30px;
+        margin-top: -50px;
+    }
+    .request {
+        padding: 10px;
+        font-size: 15px;
+    }
+    .completedcard {
+        width: fit-content;
+        height: fit-content;
+        margin-left: 20px;
+        margin-top: 15px;
+        border: 2px solid #E5E5E5;
+    }
+    .cancelledcard {
+        width: fit-content;
+        height: fit-content;
+        margin-left: 20px;
+        margin-top: 15px;
+        border: 2px solid #E5E5E5;
+    }
+    .table {
+        width: fit-content;
+        height: fit-content;
+        margin-top: 50px;
+    }
+    td {
+        text-align: center;
+    }
+    .detailsBtn {
+        margin-top: 5px;
+        margin-left: 20px;
+    }
 }
