--- a/src/app/edit-address/edit-address.component.html
+++ b/src/app/edit-address/edit-address.component.html
@@ -1,93 +1,88 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-    [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-    <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-      *ngIf="isHandset$ | async">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
-    <br>
-    <img class="logo" mat-card-image src="../../assets/mainlogo.png">
-    <mat-nav-list class="nav-list">
-      <div class="dashboardside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-          <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
-        </mat-list-item>
-      </div>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
+        <br>
+        <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <div class="dashboardside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
+                </mat-list-item>
+            </div>
+            <div class="bookingside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+                    <a class="booking-btn" routerLink="/booking">Book a Service</a>
+                </mat-list-item>
+            </div>
+            <div class="profileside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn" routerLink="/profile">Profile</a>
+                </mat-list-item>
+            </div>
+            <div class="logoutside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
+                </mat-list-item>
+            </div>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <mat-toolbar>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
+            <div>
+                <h1 class="dashtitle">Welcome to AyosGamit!</h1>
+                <label class="dashtitle2">Hire trained and certified technicians.</label>
 
-      <div class="bookingside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
-          <a class="booking-btn" routerLink="/booking">Book a Service</a>
-        </mat-list-item>
-      </div>
-
-      <div class="profileside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-          <a class="profile-btn" routerLink="/profile">Profile</a>
-        </mat-list-item>
-      </div>
-
-      <div class="logoutside">
-        <mat-list-item (click)="closeSideNav()">
-          <mat-icon class="nav-icon">exit_to_app</mat-icon>
-          <a class="logout-btn" (click)="logout()">Logout</a>
-        </mat-list-item>
-      </div>
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <mat-toolbar>
-      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <h1 class="ayosgamit">Ayosgamit</h1>
-      <span class="spacer"></span>
-    </mat-toolbar>
-
-    
-    <h1 class="backBtn" routerLink="/profile">
-      <mat-icon><b>keyboard_return</b></mat-icon>Back to Profile
-      </h1>
-      <form [formGroup]="serviceInfoForm" (ngSubmit)="serviceInfoSubmit()">
-    <mat-card class="card">
-        <h1 class="infoLbl">Edit Address</h1>
-        <p>
-          <mat-form-field class="addtextfields" appearance="outline">
-            <mat-label>Service Address</mat-label>
-            <input matInput formControlName="address" [errorStateMatcher]="matcher" autocomplete="off">
-            <mat-error *ngIf="serviceInfoForm.get('address').hasError('required')">
-              Service Adresss is required.
-            </mat-error>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field class="textfields" appearance="outline">
-            <mat-label>Service Address Details</mat-label>
-            <input matInput formControlName="addressDetails" [errorStateMatcher]="matcher" autocomplete="off">
-            <mat-error *ngIf="serviceInfoForm.get('addressDetails').hasError('required')">
-              Service Adresss Details is required.
-            </mat-error>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field class="textfields" appearance="outline">
-            <mat-label>Property Type</mat-label>
-            <mat-select formControlName="property_type" [errorStateMatcher]="matcher">
-              <mat-option *ngFor="let ptype of property" [value]="ptype">
-                {{ptype}}
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="serviceInfoForm.get('property_type').hasError('required')">
-              You must make a selection
-            </mat-error>
-          </mat-form-field>
-        </p>
-      <button class="saveBtn" type="submit"mat-raised-button> Save </button>
-    </mat-card>
-  </form>
-  </mat-sidenav-content>
+                <button mat-raised-button class="startBtn" routerLink="/booking">Get Started</button>
+            </div>
+        </mat-toolbar>
+        <h1 class="backBtn" routerLink="/profile">
+            <mat-icon><b>keyboard_return</b></mat-icon>Back to Profile
+        </h1>
+        <form [formGroup]="serviceInfoForm" (ngSubmit)="serviceInfoSubmit()">
+            <mat-card class="card">
+                <h1 class="infoLbl">Edit Address</h1>
+                <p>
+                    <mat-form-field class="addtextfields" appearance="outline">
+                        <mat-label>Service Address</mat-label>
+                        <input matInput formControlName="address" [errorStateMatcher]="matcher" autocomplete="off">
+                        <mat-error *ngIf="serviceInfoForm.get('address').hasError('required')">
+                            Service Adresss is required.
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field class="textfields" appearance="outline">
+                        <mat-label>Service Address Details</mat-label>
+                        <input matInput formControlName="addressDetails" [errorStateMatcher]="matcher" autocomplete="off">
+                        <mat-error *ngIf="serviceInfoForm.get('addressDetails').hasError('required')">
+                            Service Adresss Details is required.
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <p>
+                    <mat-form-field class="textfields" appearance="outline">
+                        <mat-label>Property Type</mat-label>
+                        <mat-select formControlName="property_type" [errorStateMatcher]="matcher">
+                            <mat-option *ngFor="let ptype of property" [value]="ptype">
+                                {{ptype}}
+                            </mat-option>
+                        </mat-select>
+                        <mat-error *ngIf="serviceInfoForm.get('property_type').hasError('required')">
+                            You must make a selection
+                        </mat-error>
+                    </mat-form-field>
+                </p>
+                <button class="saveBtn" type="submit" mat-raised-button> Save </button>
+            </mat-card>
+        </form>
+    </mat-sidenav-content>
 </mat-sidenav-container>
