--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,51 +1,48 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-            *ngIf="isHandset$ | async">
-            <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
         <br>
-        <img class="logo" mat-card-image src="../../assets/mainlogo.png">
         <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
-                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-                    <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
                 </mat-list-item>
             </div>
-
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
                     <a class="booking-btn" routerLink="/booking">Book a Service</a>
                 </mat-list-item>
             </div>
-
             <div class="profileside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
                     <a class="profile-btn" routerLink="/profile">Profile</a>
                 </mat-list-item>
             </div>
-
             <div class="logoutside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
-                    <a class="logout-btn" routerLink="/home">Logout</a>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
                 </mat-list-item>
             </div>
         </mat-nav-list>
     </mat-sidenav>
-
     <mat-sidenav-content>
         <mat-toolbar>
-            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-                *ngIf="isHandset$ | async">
-                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-            </button>
-            <h1 class="ayosgamit">Ayosgamit</h1>
-            <span class="spacer"></span>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+            <div>
+                <h1 class="dashtitle">Welcome to AyosGamit!</h1>
+                <label class="dashtitle2">Hire trained and certified technicians.</label>
+
+                <button mat-raised-button class="startBtn" routerLink="/booking">Get Started</button>
+            </div>
         </mat-toolbar>
 
         <h1 class="backBtn" routerLink="/profile">
@@ -58,59 +55,48 @@
                     <p>
                         <mat-form-field class="fnametextfields" appearance="outline">
                             <mat-label>First Name</mat-label>
-                            <input matInput formControlName="firstname" type="text" ngModel
-                                placeholder="Enter first name" required>
-                            <mat-error *ngIf="personalInfoForm.get('firstname').hasError('required')"> First name is
-                                required
+                            <input matInput formControlName="firstname" type="text" ngModel placeholder="Enter first name" required>
+                            <mat-error *ngIf="personalInfoForm.get('firstname').hasError('required')"> First name is required
                             </mat-error>
                             <mat-error *ngIf="personalInfoForm.get('firstname').hasError('pattern')"> Invalid Name
                             </mat-error>
-                            <mat-error *ngIf="personalInfoForm.get('firstname').hasError('maxlength')">Name contains
-                                maximum of 15
-                                characters</mat-error>
+                            <mat-error *ngIf="personalInfoForm.get('firstname').hasError('maxlength')">Name contains maximum of 15 characters
+                            </mat-error>
                         </mat-form-field>
                     </p>
                     <p>
                         <mat-form-field class="textfields" appearance="outline">
                             <mat-label>Last Name</mat-label>
-                            <input matInput formControlName="lastname" type="text" ngModel
-                                placeholder="Enter first name" required>
-                            <mat-error *ngIf="personalInfoForm.get('lastname').hasError('required')"> First name is
-                                required
+                            <input matInput formControlName="lastname" type="text" ngModel placeholder="Enter first name" required>
+                            <mat-error *ngIf="personalInfoForm.get('lastname').hasError('required')"> First name is required
                             </mat-error>
                             <mat-error *ngIf="personalInfoForm.get('lastname').hasError('pattern')"> Invalid Name
                             </mat-error>
-                            <mat-error *ngIf="personalInfoForm.get('lastname').hasError('maxlength')">Name contains
-                                maximum of 15
-                                characters</mat-error>
+                            <mat-error *ngIf="personalInfoForm.get('lastname').hasError('maxlength')">Name contains maximum of 15 characters
+                            </mat-error>
                         </mat-form-field>
                     </p>
                     <p>
                         <mat-form-field class="textfields" appearance="outline">
                             <mat-label>Email Address</mat-label>
-                            <input matInput formControlName="email" [email]="true" type="email" ngModel
-                                placeholder="yourname@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$"
-                                autocomplete="off">
+                            <input matInput formControlName="email" [email]="true" type="email" ngModel placeholder="yourname@example.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{3}$" autocomplete="off">
                             <mat-error *ngIf="personalInfoForm.get('email').hasError('required')"> Email is required
                             </mat-error>
-                            <mat-error *ngIf="personalInfoForm.get('email').hasError('pattern')"> Please enter a valid
-                                email address
+                            <mat-error *ngIf="personalInfoForm.get('email').hasError('pattern')"> Please enter a valid email address
                             </mat-error>
                         </mat-form-field>
                     </p>
                     <p>
                         <mat-form-field class="textfields" appearance="outline">
                             <mat-label>Contact Number</mat-label>
-                            <input matInput pattern="(09)[0-9]{9}" formControlName="number"
-                            [errorStateMatcher]="matcher" #input maxlength="11" placeholder="09XXXXXXXXX" autocomplete="off"
-                            required>
-                          <mat-hint>{{input.value?.length || 0}}/11</mat-hint>
-                          <mat-error *ngIf="personalInfoForm.get('number').hasError('required')">
-                            Enter a valid phone number
-                          </mat-error>
-                          <mat-error *ngIf="personalInfoForm.get('number').hasError('pattern')">
-                            Invalid phone number
-                          </mat-error>
+                            <input matInput pattern="(09)[0-9]{9}" formControlName="number" [errorStateMatcher]="matcher" #input maxlength="11" placeholder="09XXXXXXXXX" autocomplete="off" required>
+                            <mat-hint>{{input.value?.length || 0}}/11</mat-hint>
+                            <mat-error *ngIf="personalInfoForm.get('number').hasError('required')">
+                                Enter a valid phone number
+                            </mat-error>
+                            <mat-error *ngIf="personalInfoForm.get('number').hasError('pattern')">
+                                Invalid phone number
+                            </mat-error>
                         </mat-form-field>
                     </p>
 
