--- a/src/app/paymentform/paymentform.component.css
+++ b/src/app/paymentform/paymentform.component.css
@@ -1,115 +1,176 @@
-
-.mat-toolbar{
-  background-color: #D62828;
-  width: 100%;
-}
-.ayosgamit
-{
-font-family: 'Candara';
-font-size: 30px;
-float: left;
-color: #FFFFFF;
+.mat-toolbar {
+    width: 100%;
+    height: 80px;
 }
 
-.paypalBtn
-{
-  width: 25%;
-  float: right;
-  margin-right: 80px;
-  margin-top: 50px;
+.logo {
+    max-width: 200px;
+    height: 100px !important;
+    margin-left: 30px !important;
+    margin-top: 20px !important;
 }
 
-.paymentinfotxt
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
+.homeBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-left: 80px;
+    margin-top: 40px;
 }
 
-.payBtn
-{
-  width: 40%;
-  height: 13%;
-  float: left;
-  margin-left: 25px;
-  background-color: #003049;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  margin-top: 60px;
+.homeBtn:hover,
+.homeBtn:active {
+    color: #dd0346;
 }
 
-.payment
-{
-  width: 700px;
-  height: 450px;
-  margin: auto !important;
-  position: center !important;
-  margin-top: 50px !important;
+.menuBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
 }
 
-.header
-{
-  width: 700px;
-  height: 150px;
+.menuBtn:hover,
+.menuBtn:active {
+    color: #dd0346;
+}
+
+.pricingBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+    font-size: 17px;
+}
+
+.pricingBtn:hover,
+.pricingBtn:active {
+    color: #dd0346;
+}
+
+.contactUsBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.contactUsBtn:hover,
+.contactUsBtn:active {
+    color: #dd0346;
+}
+
+.aboutusBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.aboutusBtn:hover,
+.aboutusBtn:active {
+    color: #dd0346;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.paypalBtn {
+    width: 25%;
+    float: right;
+    margin-right: 80px;
+    margin-top: 50px;
+}
+
+.paymentinfotxt {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+
+.payBtn {
+    width: 40%;
+    height: 13%;
+    float: left;
+    margin-left: 25px;
+    background-color: #003049;
+    color: #FFFFFF;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    margin-top: 60px;
+}
+
+.payment {
+    width: 700px;
+    height: 450px;
     margin: auto !important;
-  position: center !important;
-  margin-top: 50px !important;
-}
-.ortxt
-{
-  font-size: 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: grey;
-  float: left;
-  margin-left: 50px;
-  margin-top: 70px;
+    position: center !important;
+    margin-top: 50px !important;
 }
 
-
-.pendingvector
-{
-  width: 20%;
-  height: 20%;
-  float: right;
-  
-  margin-top: 20px;
- 
+.header {
+    width: 700px;
+    height: 150px;
+    margin: auto !important;
+    position: center !important;
+    margin-top: 50px !important;
 }
 
-.pendingtxt
-{
-  color: #007f5f;
-  float: left;
-  margin-left: 10px;
-  font-size: 20px;
+.ortxt {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: grey;
+    float: left;
+    margin-left: 50px;
+    margin-top: 70px;
 }
 
-.description
-{
-  margin-top: 5px;
-  float: right;
-  margin-right: 300px;
-  
+.pendingvector {
+    width: 20%;
+    height: 20%;
+    float: right;
+    margin-top: 20px;
 }
 
-.description1
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
+.pendingtxt {
+    color: #007f5f;
+    float: left;
+    margin-left: 10px;
+    font-size: 20px;
 }
-.description2
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
+
+.description {
+    margin-top: 5px;
+    float: right;
+    margin-right: 300px;
 }
-.description3
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
+
+.description1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
+}
+
+.description2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
+    margin-top: -15px;
+}
+
+.description3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
+    margin-top: -15px;
 }
