--- a/src/app/paymentform/paymentform.component.html
+++ b/src/app/paymentform/paymentform.component.html
@@ -1,81 +1,106 @@
 <mat-toolbar>
-  <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+    <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+        <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+        <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+        <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+        <button mat-menu-item routerLink="/menu_tv">Television</button>
+    </mat-menu>
+
+    <label class="pricingBtn" routerLink="/pricing">Pricing</label>
+    <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
+    <label class="aboutusBtn" routerLink="/about_us">About Us</label>
+    <label class="aboutusBtn" routerLink="/dashboard">Home</label>
 </mat-toolbar>
 <div class="container">
 
-  <mat-card class="header">
-    <div>
-      <img class="pendingvector" mat-card-image src="../../assets/pendingvector.png">
-    </div>
+    <mat-card class="header">
+        <div>
+            <img class="pendingvector" mat-card-image src="../../assets/pendingvector.png">
+        </div>
 
-    <div class="pending">
-      <h1 class="pendingtxt">Booking details confirmed!</h1>
-    </div>
+        <div class="pending">
+            <h1 class="pendingtxt">Booking details confirmed!</h1>
+        </div>
 
-    <div class="description">
-      <p class="description1">The technician will contact you before </p>
-      <p class="description2">going to site. To get your service ID, </p>
-      <p class="description3">kindly choose a payment method.</p>
+        <div class="description">
+            <p class="description1">The technician will contact you before </p>
+            <p class="description2">going to site. To get your service ID, </p>
+            <p class="description3">kindly choose a payment method.</p>
 
-    </div>
-  </mat-card>
+        </div>
+    </mat-card>
 
 
-  <mat-card class="payment">
-    <div>
-      <h1 class="paymentinfotxt">Payment Summary</h1>
-    </div>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Check Up Fee</th>
-          <div *ngIf="service.cleaningfee != 0; then thenClean else elseClean"></div>
-          <ng-template #thenClean><th>Cleaning Fee</th></ng-template>
-          <ng-template #elseClean></ng-template>
-          
-          <div *ngIf="service.installfee != 0; then thenInstall else elseInstall"></div>
-          <ng-template #thenInstall><th>Installation Fee</th></ng-template>
-          <ng-template #elseInstall></ng-template>
+    <mat-card class="payment">
+        <div>
+            <h1 class="paymentinfotxt">Payment Summary</h1>
+        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Check Up Fee</th>
+                    <div *ngIf="service.cleaningfee != 0; then thenClean else elseClean"></div>
+                    <ng-template #thenClean>
+                        <th>Cleaning Fee</th>
+                    </ng-template>
+                    <ng-template #elseClean></ng-template>
 
-          <div *ngIf="service.unitfee != 0; then thenUnit else elseUnit"></div>
-          <ng-template #thenUnit><th>Additional Fee</th></ng-template>
-          <ng-template #elseUnit></ng-template>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>&#8369;{{service.checkupfee}}.00</td>
-          <div *ngIf="service.cleaningfee != 0; then clean else elseclean"></div>
-          <ng-template #clean><td>&#8369;{{service.cleaningfee}}.00</td></ng-template>
-          <ng-template #elseclean></ng-template>
-          
-          <div *ngIf="service.installfee != 0; then install else elseInstall"></div>
-          <ng-template #install><td>&#8369;{{service.installfee}}.00</td></ng-template>
-          <ng-template #elseInstall></ng-template>
+                    <div *ngIf="service.installfee != 0; then thenInstall else elseInstall"></div>
+                    <ng-template #thenInstall>
+                        <th>Installation Fee</th>
+                    </ng-template>
+                    <ng-template #elseInstall></ng-template>
 
-          <div *ngIf="service.unitfee != 0; then unit1 else elseUnit1"></div>
-            <ng-template #unit1><td>&#8369;{{service.unitfee}}.00</td></ng-template>
-            <ng-template #elseUnit1></ng-template>
-        </tr>
-      </tbody>
-    </table>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Total Fee</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>&#8369;{{total}}.00</td>
-        </tr>
-      </tbody>
-    </table>
+                    <div *ngIf="service.unitfee != 0; then thenUnit else elseUnit"></div>
+                    <ng-template #thenUnit>
+                        <th>Additional Fee</th>
+                    </ng-template>
+                    <ng-template #elseUnit></ng-template>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>&#8369;{{service.checkupfee}}.00</td>
+                    <div *ngIf="service.cleaningfee != 0; then clean else elseclean"></div>
+                    <ng-template #clean>
+                        <td>&#8369;{{service.cleaningfee}}.00</td>
+                    </ng-template>
+                    <ng-template #elseclean></ng-template>
 
-    <div>
-      <button mat-raised-button class="payBtn" routerLink="/paymentthankyou">Pay with Cash</button>
-      <h1 class="ortxt">OR</h1>
-      <div class="paypalBtn" id="myPaypalButtons"></div>
-    </div>
+                    <div *ngIf="service.installfee != 0; then install else elseInstall"></div>
+                    <ng-template #install>
+                        <td>&#8369;{{service.installfee}}.00</td>
+                    </ng-template>
+                    <ng-template #elseInstall></ng-template>
 
-  </mat-card>
+                    <div *ngIf="service.unitfee != 0; then unit1 else elseUnit1"></div>
+                    <ng-template #unit1>
+                        <td>&#8369;{{service.unitfee}}.00</td>
+                    </ng-template>
+                    <ng-template #elseUnit1></ng-template>
+                </tr>
+            </tbody>
+        </table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Total Fee</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>&#8369;{{total}}.00</td>
+                </tr>
+            </tbody>
+        </table>
+
+        <div>
+            <button mat-raised-button class="payBtn" routerLink="/paymentthankyou">Pay with Cash</button>
+            <h1 class="ortxt">OR</h1>
+            <div class="paypalBtn" id="myPaypalButtons"></div>
+        </div>
+
+    </mat-card>
