--- a/src/app/paymentsuccess/paymentsuccess.component.css
+++ b/src/app/paymentsuccess/paymentsuccess.component.css
@@ -1,89 +1,151 @@
-
-.mat-toolbar{
-    background-color: #D62828;
+.mat-toolbar {
     width: 100%;
-  }
-  .ayosgamit
-  {
-  font-family: 'Candara';
-  font-size: 30px;
-  float: left;
-  color: #FFFFFF;
-  }
-
-  
-.header
-{
-  width: 700px;
-  height: 300px;
-  margin: auto !important;
-  position: center !important;
-  margin-top: 50px !important;
+    height: 80px;
 }
 
-.check
-{
+.logo {
+    max-width: 200px;
+    height: 100px !important;
+    margin-left: 30px !important;
+    margin-top: 20px !important;
+}
+
+.homeBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-left: 80px;
+    margin-top: 40px;
+}
+
+.homeBtn:hover,
+.homeBtn:active {
+    color: #dd0346;
+}
+
+.menuBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.menuBtn:hover,
+.menuBtn:active {
+    color: #dd0346;
+}
+
+.pricingBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+    font-size: 17px;
+}
+
+.pricingBtn:hover,
+.pricingBtn:active {
+    color: #dd0346;
+}
+
+.contactUsBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.contactUsBtn:hover,
+.contactUsBtn:active {
+    color: #dd0346;
+}
+
+.aboutusBtn {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #003049;
+    font-size: 17px;
+    float: left;
+    margin: 30px;
+    margin-top: 40px;
+}
+
+.aboutusBtn:hover,
+.aboutusBtn:active {
+    color: #dd0346;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.header {
+    width: 700px;
+    height: 300px;
+    margin: auto !important;
+    position: center !important;
+    margin-top: 50px !important;
+}
+
+.check {
     color: #007f5f;
     font-size: 90px;
     position: center !important;
     margin-left: 300px;
-    
 }
 
-.description
-{
-  margin-top: 20px;
-  float: left;
-  margin-left: 150px;
-  text-align:center;
+.description {
+    margin-top: 20px;
+    float: left;
+    margin-left: 150px;
+    text-align: center;
 }
 
-.description1
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
- 
+.description1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
 }
-.description2
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
+
+.description2 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
+    margin-top: -15px;
 }
-.description3
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
+
+.description3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: grey;
+    margin-top: -15px;
 }
-.successtxt
-{
+
+.successtxt {
     color: #007f5f;
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-left: 220px;
 }
 
-.goTo
-{
-
+.goTo {
     font-size: 18px;
     float: right;
     margin-top: 50px;
     margin-right: 170px;
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  mat-icon
-  {
+}
+
+mat-icon {
     font-size: 25px;
     float: right;
     margin-right: 50px;
     color: #003049;
-  }
-  
-
+}
