--- a/src/app/paymentthankyou/paymentthankyou.component.html
+++ b/src/app/paymentthankyou/paymentthankyou.component.html
@@ -1,26 +1,33 @@
 <mat-toolbar>
-    <h1 class="ayosgamit" routerLink="/home">Ayosgamit</h1>
-  </mat-toolbar>
-  <div class="container">
-  
-  <mat-card class="header">
-    
-   <div>
-        <mat-icon class="check">check_circle</mat-icon>
-   </div>
-   <h1 class="successtxt">Thank You for Booking!</h1>
-  
-   <div class="description">
-    <p class="description1">Service request ID: {{service._id | slice:0:9}} </p>
-    <p class="description2">Your service request is pending.</p>
-    
-    <p class="description3">It could take a few minutes to show up in your dashboard.</p>
-  </div>
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+    <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+        <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+        <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+        <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+        <button mat-menu-item routerLink="/menu_tv">Television</button>
+    </mat-menu>
 
+    <label class="pricingBtn" routerLink="/pricing">Pricing</label>
+    <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
+    <label class="aboutusBtn" routerLink="/about_us">About Us</label>
+    <label class="aboutusBtn" routerLink="/dashboard">Home</label>
+</mat-toolbar>
+<div class="container">
+    <mat-card class="header">
+        <div>
+            <mat-icon class="check">check_circle</mat-icon>
+        </div>
+        <h1 class="successtxt">Thank You for Booking!</h1>
 
-  </mat-card>
-  
-  <h1 class="goTo" (click)="onSubmit()">
-    <mat-icon><b>keyboard_arrow_right</b></mat-icon>Go to Dashboard
+        <div class="description">
+            <p class="description1">Service request ID: {{service._id | slice:0:9}} </p>
+            <p class="description2">Your service request is pending.</p>
+
+            <p class="description3">It could take a few minutes to show up in your dashboard.</p>
+        </div>
+    </mat-card>
+    <h1 class="goTo" (click)="onSubmit()">
+        <mat-icon><b>keyboard_arrow_right</b></mat-icon>Go to Dashboard
     </h1>
-  
