--- a/src/app/requestdetails/requestdetails.component.css
+++ b/src/app/requestdetails/requestdetails.component.css
@@ -1,541 +1,149 @@
-@media (min-width: 820px)
-{
-
-.sidenav-container {
-  height: 100%;
-}
-.sidenav{
-  width: fit-content;
-  width: 280px;
-  background-color: #EAE2B7;
-}
-.mat-sidenav-content{
-   height: 910px;
-   background-color: white;
-}
-
-.logo{
-  width: 180px;
-  height: 150px;
-  padding-top: 40px;
-  margin-left: 55px;
-}
-
-.mat-toolbar{
-  background-color: #D62828;
-  width: 100%;
-}
-.ayosgamit
-{
-font-family: 'Candara';
-font-size: 30px;
-float: left;
-color: #FFFFFF;
-}
-
-
-.dashtitle
-{
-  color: #003049;
-  font-size: 25px;
-  margin-left: 80px;
-  margin-top: 60px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
-}
-
-.dashvector
-{
-  width: 360px;
-  height: 250px;
-  margin-left: 620px;
-  margin-top: -60px;
-}
-
-.nav-icon{
-  color: #003049;
-  font-size: 35px;
-  margin-left: 25px;
-  margin-top: -12px;
-}
-
-.dashboardside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.dashboardside:hover
-{
-    background-color: #c8c19c;
-    
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.dashboard-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-  text-decoration: none;
-}
-
-.bookingside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.bookingside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.booking-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-
-.profileside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.profileside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.profile-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-.spacer{
-  flex: 1 1 auto;
-}
-.inboxicon
-{
-  font-size: 30px;
-  color: #14213D;
-  margin-right: 20px;
-}
-.logoutBtn
-{
-  font-size: 20px;
-  color: antiquewhite;
-}
-.logoutBtn:hover{
-  background-color: black;
-}
-
-
-.container{
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  margin-top: 50px;
-}
-.backtxt
-{
-color: #003049;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 13px;
-margin-top: -25px;
-margin-left: 50px;
-
-}
-
-.servicetype
-{
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  position: center;
-  margin: auto;
-  
-}
-
-.header
-{
-  width: 750px;
-  height: 200px;
-  margin-top: -10px !important;
-  position: center !important;
-  margin: auto;
-  
-}
-.summary
-{
-  width: 750px;
-  height: 700px;
-  margin-top: 50px !important;
-  position: center !important;
-  margin: auto;
-}
-.title
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  margin-top: -25px;
-  margin-left: 40px;
-}
-
-.icon
-{
-  color: #003049;
-  font-size: 30px;
-  margin-top: 5px;
-  margin-left: 20px;
-}
-
-.personalinfotxt
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-top: 25px;
-}
-
-.fname
-{
-  margin-left: 20px;
-  margin-top: 20px;
-}
-
-.fname2
-{
-  margin-left: 20px;
-  margin-top: 10px;
-  font-size: 15px;
-}
-
-.lname
-{
-  margin-left: 170px;
-  margin-top: -67px;
-
-}
-
-.lname2
-{
-  margin-left: 170px;
-  margin-top: 10px;
-  font-size: 15px;
-}
-
-.number
-{
-  float: right;
-  margin-right: 100px;
-  margin-top: -67px;
-}
-
-.number2
-{
-  float: right;
-  margin-right: 145px;
-  margin-top: -33px;
-  font-size: 15px;
-}
-
-.addressinfo
-{
-  margin-top: 70px;
-}
-
-.address
-{
-  margin-left: 20px;
-  margin-top: -40px;
-}
-
-.address2
-{
-  margin-left: 20px;
-  margin-top: 10px;
-  font-size: 13px;
-}
-
-.city
-{
-  margin-left: 170px;
-  margin-top: -70px;
-}
-
-.city2
-{
-  margin-left: 170px;
-  margin-top: 10px;
-  font-size: 15px;
-}
-
-.property
-{
-  float: right;
-  margin-right: 160px;
-  margin-top: -70px;
-}
-
-.property2
-{
-  float: right;
-  margin-right: 200px;
-  margin-top: -35px;
-  font-size: 15px;
-}
-
-.zipcode
-{
-  float: right;
-  margin-right: 20px;
-  margin-top: -70px;
-}
-
-.zipcode2
-{
-  float: right;
-  margin-right: 40px;
-  margin-top: -35px;
-  font-size: 15px;
-}
-
-
-.serviceinfotxt
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-top: 20px;
-}
-
-.appliance
-{
-  margin-left: 20px;
-}
-
-.appliance2
-{
-  margin-left: 20px;
-  font-size: 15px;
-}
-
-.brand
-{
-  margin-left: 170px;
-  margin-top: -70px;
-}
-
-.brand2
-{
-  margin-left: 170px;
-  font-size: 15px;
-  margin-top: 10px;
-}
-
-
-.unittype
-{
-  float: right;
-  margin-right: 190px;
-  margin-top: -70px;
-}
-
-.unittype2
-{
-  
-  float: right;
-  margin-right: 205px;
-  margin-top: -33px;
-  font-size: 15px;
-}
-
-
-.unitprob
-{
-  margin-top: 70px;
-}
-
-.unitproblem
-{
-  margin-left: 20px;
-  margin-top: -35px;
-  
-}
-
-.unitproblem2
-{
-  margin-left: 20px;
-  font-size: 15px;
-}
-
-.datetimeinfo
-{
-  margin-top: 30px;
-}
-
-
-.date
-{
-  margin-left: 20px;
-}
-
-.date2
-{
-  margin-left: 20px;
-  font-size: 15px;
-}
-
-.time
-{
-  margin-left: 180px;
-  margin-top: -68px;
-}
-
-.time2
-{
-  margin-left: 180px;
-  margin-top: 10px;
-  font-size: 15px;
-}
-
-.termschkbox
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  float: left;
-  margin-left: 200px;
-  
-  
-}
-
-.reschedBtn
-{
-  width: 160px;
-  height: 40px;
-  background-color: #F77F00;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  float: right;
-  margin-right: 15px;
-  
-  
-}
-.cancelBtn
-{
-  width: 120px;
-  height: 40px;
-  background-color: #D62828;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 13px;
-  float: right;
-  margin: 5px;
-  margin-top: 1px;
-}
-.pending{
-  width: 100%;
-  height: 100%;
-  margin: auto;
-}
-
-.pendingtxt
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 23px;
-  color: #F77F00;
-  float: right;
-  margin-right: 740px;
-}
-
-.description
-{
-  float: left;
-  margin-left: 33px;
-  margin-top: 20px;
-}
-
-.description1
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-}
-.description2
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
-}
-.description3
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
-  color: grey;
-  margin-top: -15px;
-}
-
-.serviceinfotxt{
-  font-size: 15px;
-
-}
-
-.container{
-  width: 100%;
-  height: 100%;
-}
-
-.proceedBtn
-{
-  width: 100px;
-  height: 40px;
-  background-color: #F77F00;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  float: left;
-  margin-left: 300px;
-  margin-top: 10px;
-}
-.backBtn{
-  font-size: 20px;
-  float: left;
-  margin: 5px;
-  margin-top: 1px;
-  color: #003049;
-}
-
-.back
-{
-  font-size: 20px;
-  float: left;
-  margin-top: 3px;
-  color: #003049;
-}
+@media (min-width: 820px) {
+    .mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
+    }
+    .homeBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-left: 80px;
+        margin-top: 40px;
+    }
+    .homeBtn:hover,
+    .homeBtn:active {
+        color: #dd0346;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        font-size: 17px;
+    }
+    .pricingBtn:hover,
+    .pricingBtn:active {
+        color: #dd0346;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .contactUsBtn:hover,
+    .contactUsBtn:active {
+        color: #dd0346;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .aboutusBtn:hover,
+    .aboutusBtn:active {
+        color: #dd0346;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .container {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        margin-top: 50px;
+    }
+    .summary {
+        width: 750px;
+        height: fit-content;
+        margin-top: 50px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .title {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        margin-top: -25px;
+        margin-left: 40px;
+    }
+    .icon {
+        color: #003049;
+        font-size: 30px;
+        margin-top: 5px;
+        margin-left: 20px;
+    }
+    .personalinfotxt {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        margin-top: 25px;
+    }
+    .cancelBtn {
+        width: 120px;
+        height: 40px;
+        background-color: #D62828;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        float: right;
+        margin: 5px;
+        margin-top: 1px;
+    }
+    .proceedBtn {
+        width: 100px;
+        height: 40px;
+        background-color: #F77F00;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 14px;
+        float: left;
+        margin-left: 300px;
+        margin-top: 10px;
+    }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin: 5px;
+        margin-top: 1px;
+        color: #003049;
+    }
+    .back {
+        font-size: 20px;
+        float: left;
+        margin-top: 3px;
+        color: #003049;
+    }
+    .serviceinfotxt {
+        font-size: 15px;
+    }
 }
