--- a/src/app/requestdetails/requestdetails.component.html
+++ b/src/app/requestdetails/requestdetails.component.html
@@ -1,96 +1,110 @@
 <!--HEADER------------------------------------------------>
 <mat-toolbar>
-  <h1 class="ayosgamit">Ayosgamit</h1>
+    <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
+    <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
+        <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
+        <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
+        <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
+        <button mat-menu-item routerLink="/menu_tv">Television</button>
+    </mat-menu>
+
+    <label class="pricingBtn" routerLink="/pricing">Pricing</label>
+    <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
+    <label class="aboutusBtn" routerLink="/about_us">About Us</label>
+    <label class="aboutusBtn" routerLink="/dashboard">Home</label>
 </mat-toolbar>
 <div class="container">
-  <!--REQUEST SUMMARY------------------------------------------------>
-  <div>
+    <!--REQUEST SUMMARY------------------------------------------------>
     <div>
-      <h1 class="backBtn" routerLink="/dashboard">
-        <mat-icon class="back"><b>keyboard_return</b></mat-icon>Back to Dashboard
-      </h1>
-    </div>
-    <div>
-      <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
-    </div>
+        <div>
+            <h1 class="backBtn" routerLink="/dashboard">
+                <mat-icon class="back"><b>keyboard_return</b></mat-icon>Back to Dashboard
+            </h1>
+        </div>
+        <div>
+            <button mat-raised-button (click)="getConfirmation()" class="cancelBtn">Cancel Request</button>
+        </div>
 
-    <mat-card class="summary">
-      <div>
-        <mat-icon class="icon">description<h1 class="title">Request Details</h1>
-        </mat-icon>
-      </div>
-      <h1 class="personalinfotxt">Personal Information</h1>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Contact Number</th>
-            <th>Address</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{data.service_firstname}}</td>
-            <td>{{data.service_lastname}}</td>
-            <td>{{data.service_phoneNumber}}</td>
-            <td>{{data.service_address}}</td>
-          </tr>
-        </tbody>
-        <thead>
-          <tr>
-            <th>Address Details</th>
-            <th>City</th>
-            <th>Property Type</th>
-            <th>Barangay</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{data.service_addressDetails}}</td>
-            <td>{{data.service_city}}</td>
-            <td>{{data.service_property_type}}</td>
-            <td>{{data.service_barangay}}</td>
-          </tr>
-        </tbody>
-      </table>
+        <mat-card class="summary">
+            <div>
+                <mat-icon class="icon">description
+                    <h1 class="title">Request Details</h1>
+                </mat-icon>
+            </div>
+            <h1 class="personalinfotxt">Personal Information</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Contact Number</th>
+                        <th>Address</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{data.service_firstname}}</td>
+                        <td>{{data.service_lastname}}</td>
+                        <td>{{data.service_phoneNumber}}</td>
+                        <td>{{data.service_address}}</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Address Details</th>
+                        <th>City</th>
+                        <th>Property Type</th>
+                        <th>Barangay</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{data.service_addressDetails}}</td>
+                        <td>{{data.service_city}}</td>
+                        <td>{{data.service_property_type}}</td>
+                        <td>{{data.service_barangay}}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-      <h1 class="serviceinfotxt">Service Information</h1>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Appliance</th>
-            <th>Service</th>
-            <th>Brand</th>
-            <th>Unit Type</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{data.service_appliance}}</td>
-            <td>{{data.service_type}}</td>
-            <td>{{data.service_brand}}</td>
-            <td>{{data.service_unitType}}</td>
-          </tr>
-        </tbody>
-        <thead>
-          <tr>
-            <th>Unit Problem</th>
-            <th>Scheduled Date</th>
-            <th>Time Slot</th>
-            <th>Instruction</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>{{data.service_unitProb}}</td>
-            <td>{{data.service_date | date}}</td>
-            <td>{{data.service_timeslot}}</td>
-            <td>{{data.service_instruction}}</td>
-          </tr>
-        </tbody>
-      </table>
-    </mat-card>
-  </div>
-  <!--Technicians Details------------------------------------------------>
+            <h1 class="serviceinfotxt">Service Information</h1>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Appliance</th>
+                        <th>Service</th>
+                        <th>Brand</th>
+                        <th>Unit Type</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{data.service_appliance}}</td>
+                        <td>{{data.service_type}}</td>
+                        <td>{{data.service_brand}}</td>
+                        <td>{{data.service_unitType}}</td>
+                    </tr>
+                </tbody>
+                <thead>
+                    <tr>
+                        <th>Unit Problem</th>
+                        <th>Scheduled Date</th>
+                        <th>Time Slot</th>
+                        <th>Instruction</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{data.service_unitProb}}</td>
+                        <td>{{data.service_date | date}}</td>
+                        <td>{{data.service_timeslot}}</td>
+                        <td>{{data.service_instruction}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </mat-card>
+    </div>
+    <!--Technicians Details------------------------------------------------>
 </div>
