--- a/src/app/reschedule/reschedule.component.css
+++ b/src/app/reschedule/reschedule.component.css
@@ -1,190 +1,230 @@
-@media (min-width: 820px)
-{
-
-.mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-  
-  .ayosgamit
-  {
-  font-family: 'Candara';
-  font-size: 30px;
-  float: left;
-  color: #FFFFFF;
-  }
-p
-{
-    margin-top: 50px;
-    font-size: 15px;
-    margin-left: 20px;
-    color: grey;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@media (min-width: 820px) {
+    .mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        margin-left: 30px !important;
+        margin-top: 20px !important;
+    }
+    .homeBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-left: 80px;
+        margin-top: 40px;
+    }
+    .homeBtn:hover,
+    .homeBtn:active {
+        color: #dd0346;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+    }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        font-size: 17px;
+    }
+    .pricingBtn:hover,
+    .pricingBtn:active {
+        color: #dd0346;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .contactUsBtn:hover,
+    .contactUsBtn:active {
+        color: #dd0346;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .aboutusBtn:hover,
+    .aboutusBtn:active {
+        color: #dd0346;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 30px;
+        float: left;
+        color: #FFFFFF;
+    }
+    p {
+        margin-top: 50px;
+        font-size: 15px;
+        margin-left: 20px;
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .resched {
+        font-size: 25px;
+        margin-top: 30px;
+        margin-left: 20px;
+        color: #14213D;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .datepicker {
+        margin-top: 25px;
+        margin-left: 20px;
+    }
+    .dateBtn {
+        margin-left: 15px;
+        border-color: #a4133c;
+        color: #a4133c;
+        width: 70px !important;
+        height: 50px !important;
+        font-size: 15px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .timeslot {
+        margin-top: 30px;
+        float: left;
+        margin-left: 20px;
+        font-size: 15px;
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .timeslots {
+        margin-left: 20px;
+        margin-top: 70px;
+    }
+    .tech1Btn {
+        width: 170px;
+        height: 50px;
+        margin: 10px;
+        margin-top: -110px;
+        border-style: solid;
+        border-width: thin;
+        border-color: #a4133c;
+        color: black !important;
+    }
+    .h1technicians {
+        font-size: 12px;
+        font-family: 'Trebuchet MS';
+    }
+    .cancelBtn {
+        width: 120px;
+        height: 40px;
+        background-color: #D62828;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        float: right;
+        margin-right: 20px;
+        margin-top: 70px;
+    }
+    .container {
+        width: 100%;
+        height: 100%;
+    }
+    .summary {
+        width: fit-content;
+        height: fit-content;
+        margin-top: 50px !important;
+        position: center !important;
+        margin: auto;
+    }
+    .reschedBtn {
+        width: 160px;
+        height: 40px !important;
+        border-color: #dd0346 !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 14px;
+        float: right;
+        margin-top: 40px;
+        margin-right: 25px;
+    }
+    .reschedBtn-enable {
+        width: 160px;
+        height: 40px !important;
+        background-color: #590D22;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 14px;
+        float: right;
+        margin-top: 40px;
+        margin-right: 25px;
+    }
+    .backBtn {
+        width: 100px !important;
+        height: 40px !important;
+        font-size: 17px;
+        font-family: 'Trebuchet MS';
+        border-color: #dd0346 !important;
+        color: #a4133c !important;
+        float: left !important;
+        margin-top: 40px;
+        margin-left: 10px !important;
+    }
 }
 
-.resched
-{
-    font-size: 25px;
-    margin-top: 30px;
-    margin-left: 20px;
-    color: #14213D;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.datepicker
-{
-    margin-top: 25px;
-    margin-left: 20px;
-}
-
-.dateBtn
-{
-    margin-left: 15px;
-    border-color: #F77F00;
-    color: #F77F00;
-    width: 70px !important;
-    height: 50px !important;
-    font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-.timeslot
-{
-  margin-top: 30px;
-  float: left;
-  margin-left: 20px;
-  font-size: 15px;
-  color: grey;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.timeslots
-{
-    margin-left: 20px;
-    margin-top: 70px;
-}
-.tech1Btn
-  {
-    width: 170px;
-    height: 50px;
-    margin: 10px;
-    margin-top: -110px;
-    border-style: solid;
-    border-width: thin;
-    border-color: #FCA311 !important;
-    color: black !important;
-  }
-  
-  .h1technicians
-  {
-   font-size: 12px;
-   font-family: 'Trebuchet MS';
-  }
-
- .cancelBtn
- {
-   width: 120px;
-   height: 40px;
-   background-color: #D62828;
-   color: #FFFFFF;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   font-size: 13px;
-   float: right;
-   margin-right: 20px;
-   margin-top: 70px;
-   
-   
- }
- .container{
-  width: 100%;
-  height: 100%;
-}
-.summary
-{
-  width: fit-content;
-  height: fit-content;
-  margin-top: 100px !important;
-  position: center !important;
-  margin: auto;
-}
- .reschedBtn
-{
-  width: 160px;
-  height: 40px;
-  background-color: #F77F00;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  float: right;
-  margin-top: 40px;
-  margin-right: 25px;
-}
-.backBtn{
-  width: 100px !important;
-  height: 40px !important;
-  font-size: 17px;
-  font-family: 'Trebuchet MS';
-  border-color: #dd0346 !important;
-  color: #a4133c !important;
-  float: left !important;
-  margin-top: 40px;
-  margin-left: 10px !important;
-}
-
-}
-
-@media (max-width: 576px)
-{
-    .mat-toolbar{
+@media (max-width: 576px) {
+    .mat-toolbar {
         background-color: #D62828;
         width: 100%;
-      }
-      
-      .ayosgamit
-      {
-      font-family: 'Candara';
-      font-size: 20px;
-      float: left;
-      color: #FFFFFF;
-      }
-    
-    mat-card
-    {
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 20px;
+        float: left;
+        color: #FFFFFF;
+    }
+    mat-card {
         width: 350px;
         height: 600px;
         position: center !important;
         margin: auto;
         margin-top: 100px;
     }
-    
-    
-    p
-    {
+    p {
         margin-top: 50px;
         font-size: 15px;
         margin-left: 15px;
         color: grey;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    
-    .resched
-    {
+    .resched {
         font-size: 18px;
         margin-top: 30px;
         margin-left: 20px;
         color: #14213D;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    
-    .datepicker
-    {
-
+    .datepicker {
         margin-top: 25px;
         margin-left: 20px;
     }
-    
-    .dateBtn
-    {
-        
+    .dateBtn {
         margin-top: 25px;
         margin-left: 20px;
         border-color: #F77F00;
@@ -194,26 +234,22 @@ p
         font-size: 15px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    .timeslot
-    {
-      margin-top: 30px;
-      float: left;
-      margin-left: 20px;
-      font-size: 15px;
-      color: grey;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .timeslot {
+        margin-top: 30px;
+        float: left;
+        margin-left: 20px;
+        font-size: 15px;
+        color: grey;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    
-    .timeslots
-    {
+    .timeslots {
         margin-left: 20px;
         margin-top: 70px;
     }
-    .time{
-      color: black;
+    .time {
+        color: black;
     }
-    .tech1Btn
-      {
+    .tech1Btn {
         width: 180px;
         height: 40px;
         margin: 10px;
@@ -222,25 +258,20 @@ p
         border-width: thin;
         border-color: #FCA311 !important;
         color: black !important;
-      }
-      
-      .h1technicians
-      {
-       font-size: 12px;
-       font-family: 'Trebuchet MS';
-      }
-    
-     .reschedBtn
-    {
-      width: 160px;
-      height: 40px;
-      background-color: #F77F00;
-      color: #FFFFFF;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 14px;
-      float: right;
-      margin-top: 70px;
-      margin-right: 25px;
     }
-
+    .h1technicians {
+        font-size: 12px;
+        font-family: 'Trebuchet MS';
+    }
+    .reschedBtn {
+        width: 160px;
+        height: 40px;
+        background-color: #F77F00;
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 14px;
+        float: right;
+        margin-top: 70px;
+        margin-right: 25px;
+    }
 }
