--- a/src/app/signupform/signupform.component.css
+++ b/src/app/signupform/signupform.component.css
@@ -96,65 +96,45 @@
     justify-content: center;
     text-align: center;
 }
-.g-signin2-button
-{
-    margin-left: 30px;
-}
 
-.line1
-{
-    width: 180px;
-    float: left;
-    margin-left: 20px;
-    margin-top: 30px;
-}
-
-.ortxt
-{
-    width: 150px;
-    float: left;
-    margin-left: 25px;
-    margin-top: 20px !important;
-}
-
-.line2
-{
-    width: 180px;
-    float: right;
-    margin-right: 20px;
-    margin-top: -10px;
-}
-
-.login-emailfield
+.signup-fnamefield
 {
     min-height: 40px;
     width: 400px;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 30px;
-    
 }
-.login-passfield 
+.signup-lnamefield
 {
-    padding: 0;
+    min-height: 40px;
     width: 400px;
-    margin-top: 1px;
     margin-left: 30px;
-    
+}
+.signup-emailfield
+{
+    min-height: 40px;
+    width: 400px;
+    margin-left: 30px;
+}
+.signup-passfield 
+{
+    min-height: 40px;
+    width: 400px;
+    margin-left: 30px;
 }
 
-.forgottxt
+.accounttxt
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 13px;
-    float: right;
-    margin-top: -20px;
-    margin-right: 40px;
+    font-size: 16px;
+    float: left;
+    margin-top: 20px;
+    margin-left: 120px;
     color: #590D22;
 }
-
-.loginBtn1
+.signupBtn
 {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: 80px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
@@ -163,30 +143,20 @@
     height: 10%;
     width: 300px;
     height: 40px;
-    
-    
-}
-.accounttxt
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    float: left;
-    margin-top: 30px;
-    margin-left: 120px;
-    color: #590D22;
 }
 .signuptxt
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     float: left;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 5px;
     color: #FFB703;
 }
 .signuptxt:hover 
 {
     color: #14213D;
+    
 }
 h1
 {
@@ -197,6 +167,8 @@ h1
     position: center !important;
     margin: auto;
 }
+
+
 
 }
 
@@ -271,22 +243,6 @@ h1
         margin-top: 40px;
                      
     }
-    .login-emailfield
-    {
-        min-height: 40px;
-        width: 300px;
-        margin-top: 20px;
-        margin-left: 10px;
-        border-color: #FCA311, 3px;
-    }
-    .login-passfield 
-    {
-        padding: 0;
-        width: 300px;
-        margin-top: 1px;
-        margin-left: 10px;
-        border: #FCA311;
-    }
     .signup-fnamefield
     {
         min-height: 40px;
@@ -314,29 +270,12 @@ h1
         margin-left: 10px;
         border: #FCA311;
     }
-    .loginBtn1
-    {
-        background-color: #D62828;
-        color: #FFFFFF;
-        height: 10%;
-        width: 85%;
-        margin: auto;
-        border-radius: 5px;
-    }
     h1
     {
         color: grey;
         font-size: 15px;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin-top: 10px !important;
-        position: center !important;
-        margin: auto;
-    }
-    .g-signin2
-    {
-        height: 40px;
-        width: 50%;
-        margin-top: 30px !important;
         position: center !important;
         margin: auto;
     }
