updated change password UI

--- a/src/app/washingmachine-install/washingmachine-install.component.html
+++ b/src/app/washingmachine-install/washingmachine-install.component.html
@@ -65,7 +65,7 @@
                 </button>
               </div> -->
                 <!--Back and Next Button-->
-                <button class="backBtn" mat-stroked-button routerLink="/appliance">Back</button>
+                <button class="backBtn" mat-stroked-button routerLink="/installation">Back</button>
                 <div *ngIf="!unitdetailsForm.valid; else enable">
                     <button mat-stroked-button class="nextBtn" [disabled]="!unitdetailsForm.valid">Next</button>
                 </div>
