--- a/src/app/change-password/change-password.component.css
+++ b/src/app/change-password/change-password.component.css
@@ -1,206 +1,237 @@
 .sidenav-container {
-  height: 100%;
+    height: 100%;
 }
 
-.sidenav{
-  width: fit-content;
-  width: 280px;
-  background-color: #EAE2B7;
+.sidenav {
+    width: fit-content;
+    width: 250px;
+    background-color: #FFFFFF;
 }
 
-.mat-sidenav-content{
-   height: 910px;
-   background-color: white;
+.mat-sidenav-content {
+    height: 910px;
+    background-color: white;
 }
 
-.mat-toolbar{
-  background-color: #D62828;
-  width: 100%;
-}
-
-.logo{
-  width: 60%;
-  height: 18%;
-  margin-left: 60px;
-}
-
-.nav-icon{
-  color: #003049;
-  font-size: 35px;
-  margin-left: 25px;
-  margin-top: -12px;
-}
-
-.dashboardside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.dashboardside:hover
-{
-    background-color: #c8c19c;
-    
+.mat-toolbar {
+    background-color: #DD0346;
     width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
+    height: 200px;
+    box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
+}
+
+.logo {
+    max-width: 200px;
+    height: 100px !important;
+    float: left;
+    margin-top: 10px !important;
+    margin-left: 25px;
+}
+
+.nav-icon {
+    color: #003049;
+    font-size: 28px;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+mat-list-item {
+    background-color: transparent !important;
+}
+
+.dashboardside {
+    margin-left: 0px;
+    margin-top: 150px;
     text-align: justify;
 }
 
-.dashboard-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-  text-decoration: none;
+.dashboard-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+    text-decoration: none;
 }
 
-.bookingside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.bookingside:hover
-{
-    background-color: #c8c19c;
+.dashboardside:hover {
+    background-color: #D6B2BD;
+    border-radius: 20px;
     width: 100%;
     height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
+    text-align: center !important;
+}
+
+.bookingside {
+    margin-left: 0px;
+    margin-top: 30px;
     text-align: justify;
 }
 
-.booking-btn{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-
-.profileside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.profileside:hover
-{
-    background-color: #c8c19c;
-    
+.bookingside:hover {
+    background-color: #D6B2BD;
+    color: #FFFFFF;
+    border-radius: 20px;
     width: 100%;
     height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
+    text-align: center !important;
+}
+
+.booking-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.profileside {
+    margin-left: 0px;
+    margin-top: 30px;
     text-align: justify;
 }
 
-.profile-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-
-.logoutside{
-  margin-left: 0px;
-  margin-top: 30px;
-  text-align: justify;
-}
-
-.logoutside:hover
-{
-    background-color: #c8c19c;
+.profileside:hover {
+    background-color: #D6B2BD;
+    border-radius: 20px;
     width: 100%;
     height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
+    text-align: center !important;
+}
+
+.profile-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
+}
+
+.logoutside {
+    margin-left: 0px;
+    margin-top: 30px;
     text-align: justify;
 }
 
-.logout-btn
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 25px;
-}
-.spacer{
-  flex: 1 1 auto;
-}
-.ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 30px;
-  margin-left: 10px;
-  color: #FFFFFF;
+.logout-btn {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: -5px;
+    font-size: 16px;
+    margin-left: 20px;
+    margin-top: 25px;
 }
 
-.container
-{
+.logoutside:hover {
+    background-color: #D6B2BD;
+    color: #FFFFFF;
+    border-radius: 20px;
+    width: 100%;
+    height: 70px;
+    text-align: center !important;
+}
+
+.spacer {
+    flex: 1 1 auto;
+}
+
+.dashtitle {
+    color: #FFFFFF;
+    font-size: 25px;
+    float: left;
+    margin-left: 60px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 5px;
+}
+
+.dashtitle2 {
+    color: #FFFFFF;
+    font-size: 15px;
+    float: left;
+    margin-left: -270px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 35px;
+}
+
+.startBtn {
+    width: 120px;
+    height: 40px;
+    float: left;
+    margin-left: -270px;
+    margin-top: 80px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #FFFFFF;
+    color: #dd0346;
+    font-size: 13px;
+}
+
+.startBtn:hover,
+.startBtn:active {
+    color: #003049;
+}
+
+.ayosgamit {
+    font-family: 'Candara';
+    font-size: 30px;
+    margin-left: 10px;
+    color: #FFFFFF;
+}
+
+.container {
     width: fit-content;
     height: 100%;
     text-align: center;
 }
-.card{
 
-  width: 500px;
-  height: 350px;
-  margin: auto;
-  margin-top: 100px;
+.card {
+    width: 500px;
+    height: 350px;
+    margin: auto;
+    margin-top: 100px;
 }
 
-.newPass
-{
+.newPass {
     min-height: 40px;
     width: 300px;
     margin-left: 10px;
     margin-top: 25px;
 }
-.conPass
-{
+
+.conPass {
     min-height: 40px;
     width: 300px;
     margin-left: 10px;
 }
-.saveBtn{
-  width: 130px;
-  height: 40px;
-  margin: auto;
-  margin-bottom: 35px;
-  font-size: 16px;
-  color: #FFFFFF;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #F77F00;
-}
-.backBtn{
-  font-size: 20px;
-  float: left;
-  margin-top: 50px;
-  margin-left: 100px;
-  color: #003049;
+
+.saveBtn {
+    width: 130px;
+    height: 40px;
+    margin: auto;
+    margin-bottom: 35px;
+    font-size: 16px;
+    color: #FFFFFF;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #590D22;
 }
 
-.backIcon
-{
-  font-size: 20px;
-  float: left;
-  margin-top: 3px;
-  margin-left: 100px;
-  color: #003049;
+.backBtn {
+    font-size: 20px;
+    float: left;
+    margin-top: 50px;
+    margin-left: 100px;
+    color: #003049;
 }
 
-
-.infoLbl
-{
-  font-size: 25px;
-  margin-top: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.backIcon {
+    font-size: 20px;
+    float: left;
+    margin-top: 3px;
+    margin-left: 100px;
+    color: #003049;
 }
 
-
-
-
-
+.infoLbl {
+    font-size: 25px;
+    margin-top: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
