--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -1,34 +1,29 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-        [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-            *ngIf="isHandset$ | async">
-            <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-        </button>
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
         <br>
-        <img class="logo" mat-card-image src="../../assets/mainlogo.png">
         <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
-                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-                    <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
                 </mat-list-item>
             </div>
-
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
                     <a class="booking-btn" routerLink="/booking">Book a Service</a>
                 </mat-list-item>
             </div>
-
             <div class="profileside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
                     <a class="profile-btn" routerLink="/profile">Profile</a>
                 </mat-list-item>
             </div>
-
             <div class="logoutside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
@@ -37,19 +32,21 @@
             </div>
         </mat-nav-list>
     </mat-sidenav>
-
     <mat-sidenav-content>
         <mat-toolbar>
-            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()"
-                *ngIf="isHandset$ | async">
-                <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-            </button>
-            <h1 class="ayosgamit">Ayosgamit</h1>
-            <span class="spacer"></span>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
+            <div>
+                <h1 class="dashtitle">Welcome to AyosGamit!</h1>
+                <label class="dashtitle2">Hire trained and certified technicians.</label>
+
+                <button mat-raised-button class="startBtn" routerLink="/booking">Get Started</button>
+            </div>
         </mat-toolbar>
         <h1 class="backBtn" routerLink="/profile">
             <mat-icon class="backIcon"><b>keyboard_return</b></mat-icon>Back to Profile
-            </h1>
+        </h1>
         <div class="container">
             <form [formGroup]="changePassForm" (ngSubmit)="onPasswordChange()">
                 <div class="card">
@@ -57,26 +54,18 @@
                     <p>
                         <mat-form-field class="newPass" appearance="outline">
                             <mat-label>New Password</mat-label>
-                            <input matInput formControlName="newPassword" [errorStateMatcher]="matcher"
-                                placeholder="Enter current password" [type]="hide ? 'password' : 'text'"
-                                autocomplete="off">
-                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('required')">New Password is
-                                required</mat-error>
-                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('minlength')">Password must
-                                have at least
-                                {{minPw}} characters</mat-error>
-                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('maxlength')">Password
-                                contains maximum of
-                                {{maxPw}} characters</mat-error>
+                            <input matInput formControlName="newPassword" [errorStateMatcher]="matcher" placeholder="Enter current password" [type]="hide ? 'password' : 'text'" autocomplete="off">
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('required')">New Password is required
+                            </mat-error>
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('minlength')">Password must have at least {{minPw}} characters</mat-error>
+                            <mat-error *ngIf="changePassForm.get('newPassword').hasError('maxlength')">Password contains maximum of {{maxPw}} characters</mat-error>
                         </mat-form-field>
                     </p>
                     <p>
                         <mat-form-field class="conPass" appearance="outline">
                             <mat-label>Confirm Password</mat-label>
-                            <input matInput formControlName="confirmpassword" [errorStateMatcher]="matcher"
-                                placeholder="Enter new password" [type]="hidee ? 'password' : 'text'" autocomplete="off">
-                            <mat-icon mat-icon-button matSuffix (click)="hidee = !hidee">{{hide ? 'visibility_off' :
-                                'visibility'}} </mat-icon>
+                            <input matInput formControlName="confirmpassword" [errorStateMatcher]="matcher" placeholder="Enter new password" [type]="hidee ? 'password' : 'text'" autocomplete="off">
+                            <mat-icon mat-icon-button matSuffix (click)="hidee = !hidee">{{hide ? 'visibility_off' : 'visibility'}} </mat-icon>
                             <mat-error *ngIf="changePassForm.get('confirmpassword').hasError('required')">Confirm Password is required</mat-error>
                             <mat-error *ngIf="changePassForm.get('confirmpassword').hasError('mismatch')">Password did not match</mat-error>
                         </mat-form-field>
