--- a/src/app/loginform-admin/loginform-admin.component.html
+++ b/src/app/loginform-admin/loginform-admin.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar>
         <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
         <button mat-button class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon>
-    </button>
+      </button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
             <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
@@ -32,18 +32,10 @@
     <mat-card class="logincard">
 
 
-        <h1 class="title">Login</h1>
+        <h1 class="title">Admin Login</h1>
 
 
         <form [formGroup]="userForm" (ngSubmit)="onClickSubmit()">
-            <div class="g-signin2" data-onsuccess="onSignIn" data-width="300" data-height="40" data-longtitle="true" style="float: left; margin-left: 80px; margin-top: 30px;"></div>
-
-            <div>
-                <hr class="line1">
-                <h1 class="ortxt">OR</h1>
-                <hr class="line2">
-            </div>
-
             <mat-form-field class="login-emailfield" appearance="outline">
                 <mat-label>Email Address</mat-label>
                 <input matInput formControlName="email" [email]="true" type="email" placeholder="user@example.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{3}$">
@@ -63,14 +55,11 @@
             <label class="forgottxt">Forgot password?</label>
 
             <button mat-button class="loginBtn1" type="submit">Login</button>
-
+            <!-- 
             <div>
                 <label class="accounttxt">Don't have an account?</label>
                 <label class="signuptxt" routerLink="/signup">Sign up.</label>
-            </div>
-            <div>
-                <label class="admintxt" routerLink="/admin-login">Login as Admin.</label>
-            </div>
+            </div> -->
         </form>
 
     </mat-card>
