--- a/src/app/addtech/addtech.component.css
+++ b/src/app/addtech/addtech.component.css
@@ -1,162 +1,156 @@
 .sidenav-container {
     height: 100%;
-  }
-  
-  .sidenav{
+}
+
+.sidenav {
     width: fit-content;
     width: 280px;
     background-color: #EAE2B7;
-  }
-  
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  
-  .mat-toolbar{
+}
+
+.mat-sidenav-content {
+    height: 910px;
+    background-color: white;
+}
+
+.mat-toolbar {
     background-color: #D62828;
     width: 100%;
-  }
-  
-  .logo{
+}
+
+.logo {
     width: 60%;
     height: 18%;
     margin-left: 60px;
-  }
-  
-  .nav-icon{
+}
+
+.nav-icon {
     color: #003049;
     font-size: 35px;
     margin-left: 25px;
     margin-top: -12px;
-  }
-  
-  .dashboardside{
+}
+
+.dashboardside {
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
-  }
-  
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .dashboard-btn{
+}
+
+.dashboardside:hover {
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.dashboard-btn {
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-left: 25px;
     text-decoration: none;
-  }
-  
-  .bookingside{
+}
+
+.bookingside {
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
-  }
-  
-  .bookingside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .booking-btn{
+}
+
+.bookingside:hover {
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.booking-btn {
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-left: 25px;
-  }
-  
-  .profileside{
+}
+
+.profileside {
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
-  }
-  
-  .profileside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .profile-btn
-  {
+}
+
+.profileside:hover {
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.profile-btn {
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-left: 25px;
-  }
-  .logoutside{
+}
+
+.logoutside {
     margin-left: 0px;
     margin-top: 30px;
     text-align: justify;
-  }
-  
-  .logoutside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .logout-btn
-  {
+}
+
+.logoutside:hover {
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.logout-btn {
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     margin-left: 25px;
-  }
-  .spacer{
+}
+
+.spacer {
     flex: 1 1 auto;
-  }
-  .ayosgamit
-  {
+}
+
+.ayosgamit {
     font-family: 'Candara';
     font-size: 30px;
     margin-left: 10px;
     color: #FFFFFF;
-  }
-.mat-dialog-content
-{
+}
+
+.mat-dialog-content {
     width: 100%;
     height: 100%;
     text-align: center;
 }
 
-.title
-{
+.title {
     color: #003049;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
     margin-left: 10px;
     margin-top: 50px;
 }
-.textfield{
+
+.textfield {
     margin-top: 10px;
     width: 350px;
 }
-.addBtn
-{
+
+.addBtn {
     width: 85px;
     height: 40px;
     background-color: #FCBF49;
@@ -165,7 +159,8 @@
     float: right;
     margin-top: 10px;
 }
-.card{
+
+.card {
     width: 500px;
     height: fit-content;
     margin: auto;
@@ -173,11 +168,13 @@
     justify-content: center;
     align-items: center;
 }
-.container{
+
+.container {
     width: fit-content;
     height: auto;
     margin: auto;
 }
-.form-group{
+
+.form-group {
     text-align: left;
 }
