--- a/src/app/appliance-cleaning/appliance-cleaning.component.css
+++ b/src/app/appliance-cleaning/appliance-cleaning.component.css
@@ -1,4 +1,16 @@
 @media (min-width: 820px) {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
     .mat-toolbar {
         width: 100%;
         height: 80px;
@@ -6,69 +18,98 @@
     .logo {
         max-width: 200px;
         height: 100px !important;
-        margin-left: 30px !important;
-        margin-top: 20px !important;
-    }
-    .homeBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
         float: left;
-        margin: 30px;
-        margin-left: 80px;
-        margin-top: 40px;
+        margin-top: 10px !important;
+        margin-left: 25px;
     }
-    .homeBtn:hover,
-    .homeBtn:active {
-        color: #dd0346;
-    }
-    .menuBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .nav-icon {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
     }
-    .menuBtn:hover,
-    .menuBtn:active {
-        color: #dd0346;
+    mat-list-item {
+        background-color: transparent !important;
     }
-    .pricingBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 150px;
+        text-align: justify;
+    }
+    .dashboard-btn {
         color: #003049;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-        font-size: 17px;
-    }
-    .pricingBtn:hover,
-    .pricingBtn:active {
-        color: #dd0346;
-    }
-    .contactUsBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-    }
-    .contactUsBtn:hover,
-    .contactUsBtn:active {
-        color: #dd0346;
-    }
-    .aboutusBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
     }
-    .aboutusBtn:hover,
-    .aboutusBtn:active {
-        color: #dd0346;
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .spacer {
         flex: 1 1 auto;
@@ -76,7 +117,7 @@
     .backicon {
         font-size: 40px;
         color: #003049;
-        margin-left: 150px;
+        margin-left: 90px;
         position: relative;
         /* Adjust these values accordingly */
         top: 12px;
@@ -85,6 +126,11 @@
         font-size: 22px;
         color: #003049;
         margin-left: 10px;
+    }
+    .backicon:hover,
+    .backtxt:hover {
+        color: rgb(250, 50, 50);
+        transition: 0.6ms;
     }
     .dashtitle {
         color: #003049;
