--- a/src/app/appliances/appliances.component.html
+++ b/src/app/appliances/appliances.component.html
@@ -1,65 +1,86 @@
-<mat-toolbar>
-  <img class="logo" mat-card-image src="../../assets/mainlogo.png" routerLink="/home">
-        <label class="menuBtn" [matMenuTriggerFor]="menu">Our Services<mat-icon>expand_more</mat-icon></label> 
-            <mat-menu #menu="matMenu">
-              <button mat-menu-item routerLink="/menu_aircon">Aircon</button>
-              <button mat-menu-item routerLink="/menu_ref">Refrigerator</button>
-              <button mat-menu-item routerLink="/menu_fan">Electric Fan</button>
-              <button mat-menu-item routerLink="/menu_washing">Washing Machine</button>
-              <button mat-menu-item routerLink="/menu_tv">Television</button>
-            </mat-menu>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
+        <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+        <br>
+        <mat-nav-list class="nav-list">
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+            <div class="dashboardside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label>home</mat-icon>
+                    <a class="dashboard-btn" routerLink="/dashboard">Home</a>
+                </mat-list-item>
+            </div>
+            <div class="bookingside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">insert_invitation</mat-icon>
+                    <a class="booking-btn" routerLink="/booking">Book a Service</a>
+                </mat-list-item>
+            </div>
+            <div class="profileside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn" routerLink="/profile">Profile</a>
+                </mat-list-item>
+            </div>
 
-            <label class="pricingBtn" routerLink="/pricing">Pricing</label>
-            <label class="contactUsBtn" routerLink="/contact_us">Contact Us</label>
-            <label class="aboutusBtn" routerLink="/about_us">About Us</label>  
-            <label class="aboutusBtn" routerLink="/dashboard">Home</label>    
-</mat-toolbar> 
+            <div class="logoutside">
+                <mat-list-item (click)="closeSideNav()">
+                    <mat-icon class="nav-icon">exit_to_app</mat-icon>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
+                </mat-list-item>
+            </div>
+        </mat-nav-list>
+    </mat-sidenav>
 
-    <h1 class="backBtn" routerLink="/booking">
-      <mat-icon class="backicon">chevron_left</mat-icon>
-      <label class="backtxt">Back</label>
-    </h1>
-    <h1 class="h1title">Appliance to Repair</h1>
+    <mat-sidenav-content>
+        <mat-toolbar>
+            <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
+            <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </button>
+        </mat-toolbar>
+        <h1 class="backBtn" routerLink="/booking">
+            <mat-icon class="backicon">chevron_left</mat-icon>
+            <label class="backtxt">Back</label>
+        </h1>
+        <h1 class="h1title">Appliance to Repair</h1>
 
-    <div class="allservices">
-      <mat-card class="airconcard">
-        <mat-card-content>
-          <img class="airconimg" mat-button (click)="AirconOpen()" mat-card-image src="../../assets/airconicon.png"
-            mat-dialog-close>
-          <h1 class="aircontxt" mat-button (click)="AirconOpen()" mat-dialog-close>Aircon</h1>
-        </mat-card-content>
-      </mat-card>
+        <div class="allservices">
+            <mat-card class="airconcard">
+                <mat-card-content>
+                    <img class="airconimg" mat-button (click)="AirconOpen()" mat-card-image src="../../assets/airconicon.png" mat-dialog-close>
+                    <h1 class="aircontxt" mat-button (click)="AirconOpen()" mat-dialog-close>Aircon</h1>
+                </mat-card-content>
+            </mat-card>
 
-      <mat-card class="refcard">
-        <mat-card-content>
-          <img class="refimg" mat-button (click)="RefrigeratorOpen()" mat-card-image src="../../assets/reficon.png"
-            mat-dialog-close>
-          <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()" mat-dialog-close>Refrigerator</h1>
-        </mat-card-content>
-      </mat-card>
+            <mat-card class="refcard">
+                <mat-card-content>
+                    <img class="refimg" mat-button (click)="RefrigeratorOpen()" mat-card-image src="../../assets/reficon.png" mat-dialog-close>
+                    <h1 class="reftxt" mat-button (click)="RefrigeratorOpen()" mat-dialog-close>Refrigerator</h1>
+                </mat-card-content>
+            </mat-card>
 
-      <mat-card class="fancard">
-        <mat-card-content>
-          <img class="fanimg" mat-button (click)="ElectricfanOpen()" mat-card-image src="../../assets/efanicon.png"
-            mat-dialog-close>
-          <h1 class="fantxt" mat-button (click)="ElectricfanOpen()" mat-dialog-close>Electric Fan</h1>
-        </mat-card-content>
-      </mat-card>
+            <mat-card class="fancard">
+                <mat-card-content>
+                    <img class="fanimg" mat-button (click)="ElectricfanOpen()" mat-card-image src="../../assets/efanicon.png" mat-dialog-close>
+                    <h1 class="fantxt" mat-button (click)="ElectricfanOpen()" mat-dialog-close>Electric Fan</h1>
+                </mat-card-content>
+            </mat-card>
 
-      <mat-card class="washingcard">
-        <mat-card-content>
-          <img class="washingimg" mat-button (click)="WashingmachineOpen()" mat-card-image
-            src="../../assets/washingicon.png" mat-dialog-close>
-          <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing Machine</h1>
-        </mat-card-content>
-      </mat-card>
+            <mat-card class="washingcard">
+                <mat-card-content>
+                    <img class="washingimg" mat-button (click)="WashingmachineOpen()" mat-card-image src="../../assets/washingicon.png" mat-dialog-close>
+                    <h1 class="washingtxt" mat-button (click)="WashingmachineOpen()" mat-dialog-close>Washing Machine</h1>
+                </mat-card-content>
+            </mat-card>
 
-      <mat-card class="tvcard">
-        <mat-card-content>
-          <img class="tvimg" mat-button (click)="TelevisionOpen()" mat-card-image src="../../assets/tvicon.png"
-            mat-dialog-close>
-          <h1 class="tvtxt" mat-button (click)="TelevisionOpen()" mat-dialog-close>Television</h1>
-        </mat-card-content>
-      </mat-card>
-    </div>
-
+            <mat-card class="tvcard">
+                <mat-card-content>
+                    <img class="tvimg" mat-button (click)="TelevisionOpen()" mat-card-image src="../../assets/tvicon.png" mat-dialog-close>
+                    <h1 class="tvtxt" mat-button (click)="TelevisionOpen()" mat-dialog-close>Television</h1>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
