--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -1,243 +1,266 @@
-@media (min-width: 820px)
-{
-
-  
-  .mat-toolbar{
-    width: 100%;
-    height: 80px;
-}
-
-.logo
-{
-     max-width: 200px;
-     height: 100px !important;
-     margin-left: 30px !important;
-     margin-top: 20px !important;
-}
-
-.homeBtn
-{
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #003049;
-  font-size: 17px;
-  float: left;
-  margin: 30px;
-  margin-left: 80px;
-  margin-top: 40px;
-}
-
-.homeBtn:hover, .homeBtn:active {
-  color:#dd0346;
-}
-
-.menuBtn
-    {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
+@media (min-width: 820px) {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
+    .mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
         float: left;
-        margin: 30px;
-        margin-top: 40px;
+        margin-top: 10px !important;
+        margin-left: 25px;
     }
-    
-    .menuBtn:hover, .menuBtn:active {
-        color:#dd0346;
-    }
-    .toolbarBtn
-    {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .nav-icon {
         color: #003049;
-        float: left;
-        margin: 30px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+    mat-list-item {
+        background-color: transparent !important;
+    }
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 150px;
+        text-align: justify;
+    }
+    .dashboard-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .allservices {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .services {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #14213D;
         margin-top: 40px;
+        margin-left: 50px;
+    }
+    .h1services {
+        font-family: 'Trebuchet MS';
+    }
+    .appliancescard {
+        margin-top: 80px;
+        margin-left: 450px;
+        width: 200px;
+        height: 200px;
+        margin: 10px;
+    }
+    .h1appliances {
+        font-family: 'Trebuchet MS';
         font-size: 17px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
     }
-    
-    .toolbarBtn:hover, .toolbarBtn:active {
-        color:#dd0346;
+    .appliancesimg {
+        width: 50px;
+        height: 70px;
     }
-
-.spacer{
-    flex: 1 1 auto;
-  }
-
-.allservices{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-  .services
-  {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 30px;
-  color: #14213D;
-  margin-top: 40px;
-  margin-left: 50px;
-  }
-  
-.h1services
-{
-    font-family: 'Trebuchet MS';
-}
-.appliancescard
-{
-    margin-top: 80px;
-    margin-left: 450px;
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-}
-.h1appliances
-{
-  font-family: 'Trebuchet MS';
-  font-size: 17px;
-  justify-content: center;
-  display: flex;
-  margin: auto;
-}
-
-.appliancesimg
-{
-  width: 50px;
-  height: 70px;
-}
-
-.cleaningcard
-{
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-}
-.h1cleaning
-{
-    font-family: 'Trebuchet MS';
-    font-size: 17px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-}
-.installcard
-{
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-}
-.h1install
-{
-    font-family: 'Trebuchet MS';
-    font-size: 17px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-    margin-left: -8px;
-}
-.h1serviceneed
-{
-    font-family: 'Trebuchet MS';
-    font-size: 25px;
-    color: #14213D;
-    margin-top: 100px;
-    text-align: center;
-}
-.backBtn{
-  font-size: 20px;
-  float: left;
-  margin-top: 50px;
-  margin-left: 100px;
-  color: #003049;
-}
-.returnIcon
-{
-  font-size: 20px;
-  top: 10;
-  color: #003049;
-}
-}
-@media (max-width: 576px)
-{
-  .logo{
-    width: 65%;
-    height: 15%;
-    padding-top: 10px;
-    margin-left: 30px;
-  }
-
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-
-  .ayosgamit
-{
-  font-family: 'Candara';
-  font-size: 20px;
-  position: center;
-  color: #FFFFFF;
+    .cleaningcard {
+        width: 200px;
+        height: 200px;
+        margin: 10px;
+    }
+    .h1cleaning {
+        font-family: 'Trebuchet MS';
+        font-size: 17px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
+    }
+    .installcard {
+        width: 200px;
+        height: 200px;
+        margin: 10px;
+    }
+    .h1install {
+        font-family: 'Trebuchet MS';
+        font-size: 17px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
+        margin-left: -8px;
+    }
+    .h1serviceneed {
+        font-family: 'Trebuchet MS';
+        font-size: 25px;
+        color: #14213D;
+        margin-top: 100px;
+        text-align: center;
+    }
+    .backBtn {
+        font-size: 20px;
+        float: left;
+        margin-top: 50px;
+        margin-left: 100px;
+        color: #003049;
+    }
+    .returnIcon {
+        font-size: 20px;
+        top: 10;
+        color: #003049;
+    }
 }
 
-.h1serviceneed
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    color: #14213D;
-    margin-top: 50px;
-    text-align: center;
-}
-
-.appliancescard
-{
-    margin-top: 50px;
-    width: 40%;
-    height: 40%;
-    position: center;
-    margin-left: 110px;
-}
-.h1appliances
-{
-  font-family: 'Trebuchet MS';
-  font-size: 13px;
-  justify-content: center;
-  display: flex;
-  margin: auto;
-}
-
-.appliancesimg
-{
-  width: 50px;
-  height: 70px;
-}
-
-.cleaningcard
-{
-  margin-top: 50px;
-  width: 40%;
-  height: 40%;
-  position: center;
-  margin-left: 110px;
-}
-.h1cleaning
-{
-    font-family: 'Trebuchet MS';
-    font-size: 13px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-}
-.installcard
-{
-  margin-top: 50px;
-    width: 40%;
-    height: 40%;
-    position: center;
-    margin-left: 110px;
-}
-.h1install
-{
-    font-family: 'Trebuchet MS';
-    font-size: 12px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-    margin-left: -8px;
-}
+@media (max-width: 576px) {
+    .logo {
+        width: 65%;
+        height: 15%;
+        padding-top: 10px;
+        margin-left: 30px;
+    }
+    .mat-toolbar {
+        width: 100%;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 20px;
+        position: center;
+        color: #FFFFFF;
+    }
+    .h1serviceneed {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 15px;
+        color: #14213D;
+        margin-top: 50px;
+        text-align: center;
+    }
+    .appliancescard {
+        margin-top: 50px;
+        width: 40%;
+        height: 40%;
+        position: center;
+        margin-left: 110px;
+    }
+    .h1appliances {
+        font-family: 'Trebuchet MS';
+        font-size: 13px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
+    }
+    .appliancesimg {
+        width: 50px;
+        height: 70px;
+    }
+    .cleaningcard {
+        margin-top: 50px;
+        width: 40%;
+        height: 40%;
+        position: center;
+        margin-left: 110px;
+    }
+    .h1cleaning {
+        font-family: 'Trebuchet MS';
+        font-size: 13px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
+    }
+    .installcard {
+        margin-top: 50px;
+        width: 40%;
+        height: 40%;
+        position: center;
+        margin-left: 110px;
+    }
+    .h1install {
+        font-family: 'Trebuchet MS';
+        font-size: 12px;
+        justify-content: center;
+        display: flex;
+        margin: auto;
+        margin-left: -8px;
+    }
 }
