--- a/src/app/washingmachine-install/washingmachine-install.component.css
+++ b/src/app/washingmachine-install/washingmachine-install.component.css
@@ -1,74 +1,115 @@
 @media (min-width: 820px) {
-    mat-toolbar {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
+    .mat-toolbar {
         width: 100%;
         height: 80px;
     }
     .logo {
         max-width: 200px;
         height: 100px !important;
-        margin-left: 30px !important;
-        margin-top: 20px !important;
-    }
-    .homeBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
         float: left;
-        margin: 30px;
-        margin-left: 80px;
-        margin-top: 40px;
+        margin-top: 10px !important;
+        margin-left: 25px;
     }
-    .homeBtn:hover,
-    .homeBtn:active {
-        color: #dd0346;
-    }
-    .menuBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .nav-icon {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
     }
-    .menuBtn:hover,
-    .menuBtn:active {
-        color: #dd0346;
+    mat-list-item {
+        background-color: transparent !important;
     }
-    .pricingBtn {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 150px;
+        text-align: justify;
+    }
+    .dashboard-btn {
         color: #003049;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-        font-size: 17px;
-    }
-    .pricingBtn:hover,
-    .pricingBtn:active {
-        color: #dd0346;
-    }
-    .contactUsBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
         color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
-    }
-    .contactUsBtn:hover,
-    .contactUsBtn:active {
-        color: #dd0346;
-    }
-    .aboutusBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #003049;
-        font-size: 17px;
-        float: left;
-        margin: 30px;
-        margin-top: 40px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
     }
-    .aboutusBtn:hover,
-    .aboutusBtn:active {
-        color: #dd0346;
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
     }
     .spacer {
         flex: 1 1 auto;
@@ -235,6 +276,11 @@
         color: #a4133c !important;
         width: 100px !important;
         height: 50px !important;
+    }
+    .backBtn:hover {
+        background-color: rgb(250, 50, 50);
+        color: whitesmoke !important;
+        transition: 0.3s;
     }
     .nextBtn {
         margin-top: 30px !important;
@@ -490,6 +536,11 @@
         height: 50px;
         margin-top: 25px;
         float: left;
+    }
+    .backBtn:hover {
+        background-color: rgb(250, 50, 50);
+        color: whitesmoke !important;
+        transition: 0.3s;
     }
     .doneBtn {
         margin-top: 30px;
