--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -38,13 +38,13 @@
         <h1 class="headertxt">How It Works</h1>
     </div>
 
-    <div>
+    <div class="headerimg1">
         <img class="bookimg" mat-card-image src="../../assets/bookimg.png">
         <img class="connectimg" mat-card-image src="../../assets/connectimg.png">
         <img class="likeimg" mat-card-image src="../../assets/likeimg.png">
     </div>
 
-    <div>
+    <div class="headertitle1">
         <h1 class="booktxt">1. Book a Service</h1>
         <h1 class="connecttxt">2. Connect with Us</h1>
         <h1 class="liketxt">3. Enjoy Our Service</h1>
@@ -75,5 +75,3 @@
         <img class="protectimg" mat-card-image src="../../assets/protect.png">
         <img class="guaranteeimg" mat-card-image src="../../assets/guarantee.png">
     </div>
-
-</body>
