--- a/src/app/technicians/technicians.component.html
+++ b/src/app/technicians/technicians.component.html
@@ -1,54 +1,57 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
         <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
+  <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+</button>
         <br>
-        <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+
         <mat-nav-list class="nav-list">
+
+            <img class="logo" mat-card-image src="../../assets/mainlogo.png">
+
+
             <div class="dashboardside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon" aria-hidden="false" aria-label>dashboard</mat-icon>
-                    <a class="dashboard-btn" routerLink="/admin">Dashboard</a>
+                    <a class="dashboard-btn" routerLink="/dashboard">Dashboard</a>
                 </mat-list-item>
             </div>
             <div class="bookingside">
                 <mat-list-item (click)="closeSideNav()">
-                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">face</mat-icon>
-                    <a class="booking-btn" routerLink="/technicians">Technicians</a>
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">worker</mat-icon>
+                    <a class="booking-btn" routerLink="/booking">Technicians</a>
                 </mat-list-item>
             </div>
             <div class="profileside">
                 <mat-list-item (click)="closeSideNav()">
-                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">perm_identity</mat-icon>
-                    <a class="profile-btn" routerLink="/user">Users</a>
+                    <mat-icon class="nav-icon" aria-hidden="false" aria-label="">account_circle</mat-icon>
+                    <a class="profile-btn" routerLink="/profile">Users</a>
                 </mat-list-item>
             </div>
+
             <div class="logoutside">
                 <mat-list-item (click)="closeSideNav()">
                     <mat-icon class="nav-icon">exit_to_app</mat-icon>
-                    <a class="logout-btn" routerLink="/home">Logout</a>
+                    <a class="logout-btn" (click)="logout()">Logout</a>
                 </mat-list-item>
             </div>
+
         </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content>
         <mat-toolbar>
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-            <h1 class="ayosgamit">Ayosgamit</h1>
-            <span class="spacer"></span>
-            <mat-icon class="accounticon" aria-hidden="false" aria-label="">account_circle</mat-icon>
-            <h2 class="welcome">Welcome, ADMIN!</h2>
+              <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+          </button>
+            <h1 class="titletxt">Technicians</h1>
         </mat-toolbar>
         <div class="content">
-            <h1 class="titletxt">Technicians</h1>
+
             <!-- <img class="techicon" mat-card-image src="../../assets/techicon.png"> -->
 
             <button mat-icon-button class="addtech" (click)="AddtechOpenDialog()" aria-label="Example icon button with a home icon">
-        <mat-icon>add</mat-icon>
+        <mat-icon class="addicon">add</mat-icon>
       </button>
             <div class="content1">
 
