--- a/src/app/addtech/addtech.component.css
+++ b/src/app/addtech/addtech.component.css
@@ -1,183 +1,198 @@
-.sidenav-container {
-    height: 100%;
-  }
-  
-  .sidenav{
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-  }
-  
-  .mat-sidenav-content{
-     height: 910px;
-     background-color: white;
-  }
-  
-  .mat-toolbar{
-    background-color: #D62828;
-    width: 100%;
-  }
-  
-  .logo{
-    width: 60%;
-    height: 18%;
-    margin-left: 60px;
-  }
-  
-  .nav-icon{
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-    margin-top: -12px;
-  }
-  
-  .dashboardside{
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-  }
-  
-  .dashboardside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .dashboard-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-    text-decoration: none;
-  }
-  
-  .bookingside{
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-  }
-  
-  .bookingside:hover
-  {
-      background-color: #c8c19c;
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .booking-btn{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
-  
-  .profileside{
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-  }
-  
-  .profileside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .profile-btn
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
-  .logoutside{
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-  }
-  
-  .logoutside:hover
-  {
-      background-color: #c8c19c;
-      
-      width: 100%;
-      height: 70px;
-      margin-left: 0;
-      margin-top: 20px;
-      text-align: justify;
-  }
-  
-  .logout-btn
-  {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-  }
-  .spacer{
-    flex: 1 1 auto;
-  }
-  .ayosgamit
-  {
-    font-family: 'Candara';
-    font-size: 30px;
-    margin-left: 10px;
-    color: #FFFFFF;
-  }
-.mat-dialog-content
-{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-.title
-{
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    margin-left: 10px;
-    margin-top: 50px;
-}
-.textfield{
-    margin-top: 10px;
-    width: 350px;
-}
-.addBtn
-{
-    width: 85px;
-    height: 40px;
-    background-color: #FCBF49;
-    font-size: 15px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    float: right;
-    margin-top: 10px;
-}
-.card{
-    width: 500px;
-    height: fit-content;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.container{
-    width: fit-content;
-    height: auto;
-    margin: auto;
-}
-.form-group{
-    text-align: left;
+@media (min-width: 820px) {
+    .sidenav-container {
+        height: 100%;
+    }
+    .sidenav {
+        width: fit-content;
+        width: 250px;
+        background-color: #FFFFFF;
+    }
+    .mat-sidenav-content {
+        height: 910px;
+        background-color: white;
+    }
+    .mat-toolbar {
+        background-color: #DD0346;
+        width: 100%;
+        height: 100px;
+        box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
+    }
+    .logo {
+        max-width: 200px;
+        height: 100px !important;
+        float: left;
+        margin-top: 10px !important;
+        margin-left: 25px;
+    }
+    .nav-icon {
+        color: #003049;
+        font-size: 28px;
+        margin-left: 20px;
+        margin-top: 15px;
+    }
+    mat-list-item {
+        background-color: transparent !important;
+    }
+    .dashboardside {
+        margin-left: 0px;
+        margin-top: 150px;
+        text-align: justify;
+    }
+    .dashboard-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+        text-decoration: none;
+    }
+    .dashboardside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .bookingside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .bookingside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .booking-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .profileside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .profileside:hover {
+        background-color: #D6B2BD;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .profile-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside {
+        margin-left: 0px;
+        margin-top: 30px;
+        text-align: justify;
+    }
+    .logout-btn {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: -5px;
+        font-size: 16px;
+        margin-left: 20px;
+        margin-top: 25px;
+    }
+    .logoutside:hover {
+        background-color: #D6B2BD;
+        color: #FFFFFF;
+        border-radius: 20px;
+        width: 100%;
+        height: 70px;
+        text-align: center !important;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .ayosgamit {
+        font-family: 'Candara';
+        font-size: 30px;
+        margin-left: 10px;
+        color: #FFFFFF;
+    }
+    .mat-dialog-content {
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+    .title {
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        margin-left: 10px;
+        margin-top: 50px;
+    }
+    .titletxt {
+        color: #FFFFFF;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 25px;
+        margin-left: 30px;
+        margin-top: 50px;
+    }
+    .backBtn {
+        background-color: #590D22;
+        float: left;
+        margin-left: 50px;
+        margin-top: 50px;
+    }
+    .backicon {
+        color: #FFFFFF;
+        margin-left: 10px;
+    }
+    .textfield {
+        margin-top: 10px;
+        width: 350px;
+    }
+    .addBtn {
+        width: 85px;
+        height: 40px;
+        background-color: #590D22;
+        color: #FFFFFF;
+        font-size: 15px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        float: right;
+        margin-top: 10px;
+    }
+    .addBtn:hover,
+    .addBtn:active {
+        color: #f9dcc4;
+    }
+    .addtechvector {
+        width: 40%;
+        float: left;
+        margin-left: 100px;
+        margin-top: 80px;
+    }
+    .card {
+        width: 500px;
+        height: fit-content;
+        float: left;
+        margin-top: -450px;
+        margin-left: 700px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .container {
+        width: fit-content;
+        height: auto;
+        float: left;
+        margin-left: 50px;
+        margin-top: -20px;
+    }
+    .form-group {
+        text-align: left;
+    }
 }
