--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,49 +1,34 @@
-@media (min-width: 820px)
-{    
-    body
-    {
-        
+@media (min-width: 820px) {
+    body {
         background-size: cover;
         text-align: center;
         width: 100%;
         height: 100vh;
         background-attachment: fixed;
     }
-
-  mat-toolbar
-  {
-      width: 100%;
-      height: 80px;
-  }
-
-   .logo
-   {
+    mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .logo {
         max-width: 200px;
         height: 100px !important;
         margin-left: 30px !important;
         margin-top: 20px !important;
-   }
-
-    .content
-    {
-        
-       float: left;
-       margin-left: 280px;
-       margin-top: 250px;
-        
     }
-    
-    .title1
-    {
+    .content {
+        float: left;
+        margin-left: 280px;
+        margin-top: 250px;
+    }
+    .title1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
         font-size: 35px;
         margin-left: 10px;
     }
-    
-    .title2
-    {
+    .title2 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         float: left;
@@ -51,39 +36,31 @@
         margin-left: -372px;
         margin-top: 35px;
     }
-
-    .bookBtn
-{
-    width: 150px;
-    height: 50px;
-    float: left;
-    margin-left: -480px;
-    margin-top: 100px !important;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #dd0346;
-    color: #FFFFFF;
-    text-decoration: none !important;
-    border-radius: 3px;
-    font-size: 18px;
-}
-
-.bookBtn:hover, .bookBtn:active {
-    color:#ffb5a7;
-}
-
-    .image
-    {
+    .bookBtn {
+        width: 150px;
+        height: 50px;
+        float: left;
+        margin-left: -480px;
+        margin-top: 100px !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        text-decoration: none !important;
+        border-radius: 3px;
+        font-size: 18px;
+    }
+    .bookBtn:hover,
+    .bookBtn:active {
+        color: #ffb5a7;
+    }
+    .image {
         margin-top: -150px;
         width: 40%;
         height: 30%;
         float: right;
         margin-right: 270px;
-       
-
     }
-
-    .menuBtn
-    {
+    .menuBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #003049;
         font-size: 17px;
@@ -91,148 +68,143 @@
         margin: 30px;
         margin-top: 40px;
     }
-    
-    .menuBtn:hover, .menuBtn:active {
-        color:#dd0346;
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
     }
+    .pricingBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+        font-size: 17px;
+    }
+    .pricingBtn:hover,
+    .pricingBtn:active {
+        color: #dd0346;
+    }
+    .contactUsBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .contactUsBtn:hover,
+    .contactUsBtn:active {
+        color: #dd0346;
+    }
+    .aboutusBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        float: left;
+        margin: 30px;
+        margin-top: 40px;
+    }
+    .aboutusBtn:hover,
+    .aboutusBtn:active {
+        color: #dd0346;
+    }
+    .spacer {
+        flex: 1 1 auto;
+    }
+    .loginBtn {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        font-size: 15px;
+    }
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
+    }
+    mat-icon {
+        font-size: 20px;
+    }
+    .headertxt {
+        position: center !important;
+        margin-top: 900px !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #003049;
+    }
+    .footer {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        background-color: #D62828;
+        color: whitesmoke;
+        text-align: center;
+    }
+}
 
-.pricingBtn
-{
+.headerimg1 {
+    position: center;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.headertxt {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-    font-size: 17px;
-    
-}
-
-
-.pricingBtn:hover, .pricingBtn:active {
-    color:#dd0346;
-}
-
-.contactUsBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.contactUsBtn:hover, .contactUsBtn:active {
-    color:#dd0346;
-}
-
-.aboutusBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #003049;
-    font-size: 17px;
-    float: left;
-    margin: 30px;
-    margin-top: 40px;
-}
-
-.aboutusBtn:hover, .aboutusBtn:active {
-    color:#dd0346;
-}
-
-.spacer{
-    flex: 1 1 auto;
-  }
-
-.loginBtn
-{
-    float: right !important;
-    width: 140px;
-    height: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #dd0346;
-    color: #FFFFFF;
-    font-size: 15px;
-}
-
-.loginBtn:hover, .loginBtn:active {
-    color:#f9dcc4;
-}
-mat-icon
-{
     font-size: 20px;
-}
-
-.headertxt
-{
     position: center !important;
-    margin-top: 900px !important;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
+}
+
+.headertitle1 {
+    position: center !important;
+    margin: auto;
+}
+
+.content1 {
+    font-size: 18px;
     color: #003049;
-   
-}
-
-.footer
-{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    background-color: #D62828;
-    color: whitesmoke;
-    text-align: center;
-}
+    border: none;
 }
 
-.bookimg
-{
+.bookimg {
     width: 15%;
     height: 20%;
+}
+
+.booktxt {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #003049;
+    margin-top: 10px;
+    float: left;
+    margin-left: 530px;
+}
+
+.booklabel {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    color: #003049;
+    text-align: center;
+    margin-top: 10px;
     float: left;
     margin-left: 400px;
-    
 }
 
-.booktxt
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #003049;
-    margin-top: 10px;
-    float: left;
-    margin-left: 470px;
-}
-
-.booklabel
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 17px;
-    color: #003049;
-    text-align: center;
-    margin-top: 10px;
-    float: left;
-    margin-left: 430px;
-}
-.connectimg
-{
+.connectimg {
     width: 15%;
     height: 20%;
-    float: left;
-    margin-left: 130px;
-   
 }
 
-.connecttxt
-{
+.connecttxt {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: #003049;
     margin-top: 10px;
-    float: left;
-    margin-left: 250px;
+    text-align: center;
 }
 
-.connectlabel
-{
+.connectlabel {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 17px;
     color: #003049;
@@ -242,17 +214,12 @@ mat-icon
     margin-left: 150px;
 }
 
-.likeimg
-{
+.likeimg {
     width: 15%;
     height: 20%;
-    float: right;
-    margin-right: 450px;
-    
 }
 
-.liketxt
-{
+.liketxt {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: #003049;
@@ -261,8 +228,7 @@ mat-icon
     margin-left: 190px;
 }
 
-.likelabel
-{
+.likelabel {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 17px;
     color: #003049;
@@ -272,97 +238,92 @@ mat-icon
     margin-left: 130px;
 }
 
-.header2txt
-{
+.header2txt {
     position: center !important;
     margin-top: 600px !important;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 30px;
     color: #003049;
-   
 }
 
-.convenientimg
-{
+.convenientimg {
     width: 10%;
     height: 20%;
     float: left;
     margin-left: 500px;
     margin-top: 50px;
-    
 }
 
-.protectimg
-{
+.protectimg {
     width: 10%;
     height: 20%;
     float: left;
     margin-left: 160px;
     margin-top: 50px;
-    
 }
 
-.guaranteeimg
-{
+.guaranteeimg {
     width: 10%;
     height: 20%;
     float: left;
     margin-left: 150px;
     margin-top: 50px;
-    
 }
-@media (max-width: 576px)
-{
 
-    body
-    {
-        background-image: url('../../assets/mobilebg.jpg');
-        background-size: cover;
-        text-align: center;
+@media (max-width: 576px) {
+    mat-toolbar {
         width: 100%;
-        height: 100vh;
-        background-attachment: fixed;
-        
+        height: 100px;
     }
-    .logo
-    {
-        width: 30%;
-        height: 30%;
+    .logo {
+        width: 50%;
         float: left !important;
         margin-left: 10px;
         margin-top: 20px;
     }
-    
-    .content
-    {
-      
+    .image {
+        margin-top: -210px;
+        width: 100%;
+        height: 30%;
+        float: right;
+        margin-right: -230px;
+        display: none;
+    }
+    .loginBtn {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        font-size: 15px;
+        display: none;
+    }
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
+    }
+    .content {
         float: left;
         margin-left: 10px;
         margin-top: 150px;
-        
     }
-    
-    .title1
-    {
+    .title1 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #FFFFFF;
+        color: #003049;
         float: left;
-        font-size: 20px;
+        font-size: 18px;
         margin-left: 10px;
     }
-    
-    .title2
-    {
+    .title2 {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        color: #FFFFFF;
+        color: #003049;
         float: left;
-        font-size: 20px;
+        font-size: 18px;
         margin-left: 10px;
         margin-top: 0;
     }
-    
-    .pricingBtn
-    {
+    .pricingBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #FFFFFF;
         float: left;
@@ -371,9 +332,7 @@ mat-icon
         font-size: 15px;
         display: none;
     }
-    
-    .contactUsBtn
-    {
+    .contactUsBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #FFFFFF;
         font-size: 17px;
@@ -383,9 +342,7 @@ mat-icon
         font-size: 15px;
         display: none;
     }
-    
-    .aboutusBtn
-    {
+    .aboutusBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: #FFFFFF;
         font-size: 17px;
@@ -393,31 +350,31 @@ mat-icon
         display: none;
         font-size: 15px;
     }
-    
-    .menuBtn
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #FFFFFF;
-    font-size: 17px;
-    float: left;
-    margin-left: 100px;
-    margin-top: 80px;
-    display: none;
-}
-
-    .bookBtn
-    {
+    .menuBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #FFFFFF;
-        color: #D62828;
+        color: #FFFFFF;
+        font-size: 17px;
         float: left;
-        margin-left: 15px;
-        margin-top: 20px;
-        font-size: 12px;
+        margin-left: 100px;
+        margin-top: 80px;
+        display: none;
     }
-    
-    .inquireBtn
-    {
+    .bookBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        width: 130px;
+        height: 40px;
+        float: left;
+        margin-left: 10px;
+        margin-top: 10px;
+        font-size: 14px;
+    }
+    .bookBtn:hover,
+    .bookBtn:active {
+        color: #ffb5a7;
+    }
+    .inquireBtn {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         background-color: #D62828;
         color: #FFFFFF;
@@ -426,8 +383,134 @@ mat-icon
         margin-top: 20px;
         font-size: 12px;
     }
-    .footer
-    {
+    .headerimg1 {
+        position: center;
+        margin: auto;
+        margin-top: 50px;
+        display: none;
+    }
+    .headertxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        position: center !important;
+        display: none;
+    }
+    .headertitle1 {
+        position: center !important;
+        margin: auto;
+        display: none;
+    }
+    .content1 {
+        font-size: 18px;
+        color: #003049;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        border: none;
+        display: none;
+    }
+    .bookimg {
+        width: 15%;
+        height: 20%;
+        display: none;
+    }
+    .booktxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        color: #003049;
+        margin-top: 10px;
+        float: left;
+        margin-left: 530px;
+        display: none;
+    }
+    .booklabel {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 17px;
+        color: #003049;
+        text-align: center;
+        margin-top: 10px;
+        float: left;
+        margin-left: 400px;
+        display: none;
+    }
+    .connectimg {
+        width: 15%;
+        height: 20%;
+        display: none;
+    }
+    .connecttxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        color: #003049;
+        margin-top: 10px;
+        display: none;
+        text-align: center;
+    }
+    .connectlabel {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 17px;
+        color: #003049;
+        text-align: center;
+        margin-top: 10px;
+        float: left;
+        margin-left: 150px;
+        display: none;
+    }
+    .likeimg {
+        width: 15%;
+        height: 20%;
+        display: none;
+    }
+    .liketxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        color: #003049;
+        margin-top: 10px;
+        float: left;
+        margin-left: 190px;
+        display: none;
+    }
+    .likelabel {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 17px;
+        color: #003049;
+        text-align: center;
+        margin-top: 10px;
+        float: left;
+        margin-left: 130px;
+        display: none;
+    }
+    .header2txt {
+        position: center !important;
+        margin-top: 600px !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 30px;
+        color: #003049;
+        display: none;
+    }
+    .convenientimg {
+        width: 10%;
+        height: 20%;
+        float: left;
+        margin-left: 500px;
+        margin-top: 50px;
+        display: none;
+    }
+    .protectimg {
+        width: 10%;
+        height: 20%;
+        float: left;
+        margin-left: 160px;
+        margin-top: 50px;
+        display: none;
+    }
+    .guaranteeimg {
+        width: 10%;
+        height: 20%;
+        float: left;
+        margin-left: 150px;
+        margin-top: 50px;
+        display: none;
+    }
+    .footer {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-size: 20px;
         background-color: #D62828;
