--- a/src/app/loginform/loginform.component.css
+++ b/src/app/loginform/loginform.component.css
@@ -163,104 +163,164 @@
 }
 
 @media (max-width: 576px) {
-    body {
-        background-image: url('../../assets/homebg.jpg');
-        background-size: cover;
-        text-align: center;
+    mat-toolbar {
         width: 100%;
-        height: 100vh;
-        background-attachment: fixed;
-    }
-    .mat-toolbar {
-        background-color: #D62828;
-        width: 100%;
-    }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
-        margin-left: 10px;
-        color: #FFFFFF;
-    }
-    .container {
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .mat-toolbar {
-        background-color: #D62828;
-        width: 100%;
-    }
-    .ayosgamit {
-        font-family: 'Candara';
-        font-size: 30px;
-        margin-left: 10px;
-        color: #FFFFFF;
-    }
-    .signincard {
-        width: 70%;
-        height: 50%;
-        border-radius: 20px;
-        background-color: #fffade;
-        justify-content: center;
-        opacity: 1;
-    }
-    .mat-tab-group {
-        margin-top: 20px;
-        width: 190px;
-        text-align: center !important;
+        height: 100px !important;
     }
     .logo {
-        height: 40%;
-        width: 40%;
+        width: 50%;
+        float: left !important;
+        margin-left: 10px;
+        margin-top: 40px !important;
+    }
+    .mat-toolbar {
+        width: 100%;
+        height: 80px;
+    }
+    .menuBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
         float: left;
-        margin-left: 120px;
+        margin: 30px;
         margin-top: 40px;
+        display: none;
+    }
+    .menuBtn:hover,
+    .menuBtn:active {
+        color: #dd0346;
+    }
+    .toolbarBtn {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #003049;
+        font-size: 17px;
+        margin: 25px;
+        margin-top: 30px;
+        display: none;
+    }
+    .toolbarBtn:hover,
+    .toolbarBtn:active {
+        color: #dd0346;
+    }
+    .loginBtn {
+        float: right !important;
+        width: 140px;
+        height: 40px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #dd0346;
+        color: #FFFFFF;
+        font-size: 15px;
+        display: none;
+    }
+    .loginBtn:hover,
+    .loginBtn:active {
+        color: #f9dcc4;
+    }
+    .mat-icon {
+        font-size: 20px;
+    }
+    .loginvector {
+        width: 30%;
+        margin-top: 60px !important;
+        float: left;
+        margin-left: 200px;
+        display: none;
+    }
+    .logincard {
+        background-color: #FFFFFF;
+        width: 340px;
+        height: 550px;
+        float: right;
+        margin-right: 20px;
+        margin-top: 100px;
+    }
+    .title {
+        text-align: center;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 20px;
+        color: #590D22;
+    }
+    .mat-tab-group {
+        width: 320px;
+        text-align: center;
+        margin-top: 20px;
+    }
+    .mat-tab-label {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    .g-signin2-button {
+        margin-left: -10px;
+        width: 200px;
+        display: none !important;
+    }
+    .line1 {
+        width: 100px;
+        float: left;
+        margin-left: 20px;
+        margin-top: 30px;
+    }
+    .ortxt {
+        width: 150px;
+        float: left;
+        margin-left: 25px;
+        margin-top: 20px !important;
+    }
+    .line2 {
+        width: 100px;
+        float: right;
+        margin-right: 20px;
+        margin-top: -10px;
     }
     .login-emailfield {
         min-height: 40px;
-        width: 300px;
-        margin-top: 20px;
-        margin-left: 10px;
-        border-color: #FCA311, 3px;
+        width: 220px;
+        margin-top: 10px;
+        margin-left: 30px;
     }
     .login-passfield {
         padding: 0;
-        width: 300px;
+        width: 220px;
         margin-top: 1px;
-        margin-left: 10px;
-        border: #FCA311;
+        margin-left: 30px;
     }
-    .signup-fnamefield {
-        min-height: 40px;
-        width: 300px;
-        margin-left: 10px;
-        margin-top: 50px;
-    }
-    .signup-lnamefield {
-        min-height: 40px;
-        width: 300px;
-        margin-left: 10px;
-    }
-    .signup-emailfield {
-        min-height: 40px;
-        width: 300px;
-        margin-left: 10px;
-        border: #FCA311, 3px;
-    }
-    .signup-passfield {
-        min-height: 40px;
-        width: 300px;
-        margin-left: 10px;
-        border: #FCA311;
+    .forgottxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 13px;
+        float: right;
+        margin-top: -20px;
+        margin-right: 10px;
+        color: #590D22;
     }
     .loginBtn1 {
-        background-color: #D62828;
+        margin-top: 20px;
+        position: center !important;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        background-color: #dd0346;
         color: #FFFFFF;
         height: 10%;
-        width: 85%;
-        margin: auto;
-        border-radius: 5px;
+        width: 300px;
+        height: 40px;
+    }
+    .accounttxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        position: center !important;
+        margin-top: 30px;
+        color: #590D22;
+    }
+    .signuptxt {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 16px;
+        position: center !important;
+        margin-top: 30px;
+        margin-left: 5px;
+        color: #FFB703;
+    }
+    .signuptxt:hover {
+        color: #14213D;
     }
     h1 {
         color: grey;
@@ -268,20 +328,6 @@
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin-top: 10px !important;
         position: center !important;
-        margin: auto;
-    }
-    .g-signin2 {
-        height: 40px;
-        width: 50%;
-        margin-top: 30px !important;
-        position: center !important;
-        margin: auto;
-    }
-    .signupBtn {
-        background-color: #D62828;
-        color: #FFFFFF;
-        height: 10%;
-        width: 85%;
         margin: auto;
     }
 }
