--- a/src/app/technicians/technicians.component.css
+++ b/src/app/technicians/technicians.component.css
@@ -1,234 +1,217 @@
-.sidenav-container {
-    height: 100%;
-}
-
-.sidenav {
-    width: fit-content;
-    width: 280px;
-    background-color: #EAE2B7;
-}
-
-.mat-sidenav-content {
-    height: 910px;
-    background-color: white;
-}
-
-.mat-toolbar {
-    background-color: #D62828;
-    width: 100%;
-}
-
-.logo {
-    width: 60%;
-    height: 18%;
-    margin-left: 60px;
-}
-
-.nav-icon {
-    color: #003049;
-    font-size: 35px;
-    margin-left: 25px;
-    margin-top: -12px;
-}
-
-.dashboardside {
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-}
-
-.dashboardside:hover {
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.dashboard-btn {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-    text-decoration: none;
-}
-
-.bookingside {
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-}
-
-.bookingside:hover {
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.booking-btn {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-}
-
-.profileside {
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-}
-
-.profileside:hover {
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.profile-btn {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-}
-
-.logoutside {
-    margin-left: 0px;
-    margin-top: 30px;
-    text-align: justify;
-}
-
-.logoutside:hover {
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    text-align: justify;
-}
-
-.logout-btn {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 25px;
-}
-
-.spacer {
-    flex: 1 1 auto;
-}
-
-.ayosgamit {
-    font-family: 'Candara';
-    font-size: 30px;
-    margin-left: 10px;
-    color: #FFFFFF;
-}
-
-.welcome {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-top: 3px;
-    color: #FFFFFF;
-}
-
-.accounticon {
-    font-size: 38px;
-    margin-top: -10px;
-    margin-right: 15px;
-    color: #FFFFFF;
-}
-
-.content {
-    margin: auto;
-}
-
-.content1 {
-    margin: auto;
-}
-
-.searchfield {
-    width: 250px;
-    height: 10px;
-    margin-top: 20px;
-    float: right;
-}
-
-.titletxt {
-    color: #003049;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    margin-left: 80px;
-    margin-top: 50px;
-}
-
-.techicon {
-    width: 360px;
-    height: 250px;
-    float: right;
-    margin-right: 100px;
-    margin-top: -20px;
-}
-
-.addtech {
-    background-color: #FCBF49;
-    margin-left: 80px;
-}
-
-.technician1 {
-    width: 750px;
-    height: fit-content;
-    margin-left: 80px;
-    margin-top: 50px;
-    border: 2px;
-}
-
-.name1 {
-    color: #003049;
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-left: 55px;
-    margin-top: 2px;
-}
-
-.position1 {
-    color: #003049;
-    font-family: 'Trebuchet MS';
-    margin-top: -8px;
-    font-size: 13px;
-    margin-left: 55px;
-}
-
-.statusBtn1 {
-    width: 70px;
-    height: 35px;
-    float: right;
-    margin: auto;
-    margin-right: 110px;
-    margin-top: -40px;
-    border-color: #FCBF49;
-    font-family: 'Trebuchet MS';
-}
-
-.profileBtn1 {
-    width: 70px;
-    height: 35px;
-    float: right;
-    margin: auto;
-    margin-right: 30px;
-    margin-top: -40px;
-    background-color: #FCBF49;
-    font-family: 'Trebuchet MS';
-}
-
-.editBtn1 {
-    float: right;
-    margin: auto;
-    margin-top: -45px;
-}
+        @media (min-width: 820px) {
+            .sidenav-container {
+                height: 100%;
+            }
+            .sidenav {
+                width: fit-content;
+                width: 250px;
+                background-color: #FFFFFF;
+            }
+            .mat-sidenav-content {
+                height: 910px;
+                background-color: white;
+            }
+            .mat-toolbar {
+                background-color: #DD0346;
+                width: 100%;
+                height: 100px;
+                box-shadow: 0 3px 2px -2px rgba(0, 0, 0, .2);
+            }
+            .logo {
+                max-width: 200px;
+                height: 100px !important;
+                float: left;
+                margin-top: 10px !important;
+                margin-left: 25px;
+            }
+            .nav-icon {
+                color: #003049;
+                font-size: 28px;
+                margin-left: 20px;
+                margin-top: 15px;
+            }
+            mat-list-item {
+                background-color: transparent !important;
+            }
+            .dashboardside {
+                margin-left: 0px;
+                margin-top: 150px;
+                text-align: justify;
+            }
+            .dashboard-btn {
+                color: #003049;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 16px;
+                margin-left: 20px;
+                margin-top: 25px;
+                text-decoration: none;
+            }
+            .dashboardside:hover {
+                background-color: #D6B2BD;
+                border-radius: 20px;
+                width: 100%;
+                height: 70px;
+                text-align: center !important;
+            }
+            .bookingside {
+                margin-left: 0px;
+                margin-top: 30px;
+                text-align: justify;
+            }
+            .bookingside:hover {
+                background-color: #D6B2BD;
+                color: #FFFFFF;
+                border-radius: 20px;
+                width: 100%;
+                height: 70px;
+                text-align: center !important;
+            }
+            .booking-btn {
+                color: #003049;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 16px;
+                margin-left: 20px;
+                margin-top: 25px;
+            }
+            .profileside {
+                margin-left: 0px;
+                margin-top: 30px;
+                text-align: justify;
+            }
+            .profileside:hover {
+                background-color: #D6B2BD;
+                border-radius: 20px;
+                width: 100%;
+                height: 70px;
+                text-align: center !important;
+            }
+            .profile-btn {
+                color: #003049;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 16px;
+                margin-left: 20px;
+                margin-top: 25px;
+            }
+            .logoutside {
+                margin-left: 0px;
+                margin-top: 30px;
+                text-align: justify;
+            }
+            .logout-btn {
+                color: #003049;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                margin-top: -5px;
+                font-size: 16px;
+                margin-left: 20px;
+                margin-top: 25px;
+            }
+            .logoutside:hover {
+                background-color: #D6B2BD;
+                color: #FFFFFF;
+                border-radius: 20px;
+                width: 100%;
+                height: 70px;
+                text-align: center !important;
+            }
+            .spacer {
+                flex: 1 1 auto;
+            }
+            .ayosgamit {
+                font-family: 'Candara';
+                font-size: 30px;
+                margin-left: 10px;
+                color: #FFFFFF;
+            }
+            .welcome {
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 18px;
+                margin-top: 3px;
+                color: #FFFFFF;
+            }
+            .accounticon {
+                font-size: 38px;
+                margin-top: -10px;
+                margin-right: 15px;
+                color: #FFFFFF;
+            }
+            .content {
+                margin: auto;
+            }
+            .content1 {
+                margin: auto;
+            }
+            .searchfield {
+                width: 250px;
+                height: 10px;
+                margin-top: 20px;
+                float: right;
+            }
+            .titletxt {
+                color: #FFFFFF;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-size: 25px;
+                margin-left: 30px;
+                margin-top: 50px;
+            }
+            .techicon {
+                width: 360px;
+                height: 250px;
+                float: right;
+                margin-right: 100px;
+                margin-top: -20px;
+            }
+            .addtech {
+                background-color: #590D22;
+                margin-left: 80px;
+                margin-top: 50px;
+            }
+            .addicon {
+                color: #FFFFFF;
+            }
+            .technician1 {
+                width: 750px;
+                height: fit-content;
+                margin-left: 80px;
+                margin-top: 50px;
+                border: 2px;
+            }
+            .name1 {
+                color: #003049;
+                font-family: 'Trebuchet MS';
+                font-size: 18px;
+                margin-left: 55px;
+                margin-top: 2px;
+            }
+            .position1 {
+                color: #003049;
+                font-family: 'Trebuchet MS';
+                margin-top: -8px;
+                font-size: 13px;
+                margin-left: 55px;
+            }
+            .statusBtn1 {
+                width: 70px;
+                height: 35px;
+                float: right;
+                margin: auto;
+                margin-right: 110px;
+                margin-top: -40px;
+                border-color: #FCBF49;
+                font-family: 'Trebuchet MS';
+            }
+            .profileBtn1 {
+                width: 70px;
+                height: 35px;
+                float: right;
+                margin: auto;
+                margin-right: 30px;
+                margin-top: -40px;
+                background-color: #FCBF49;
+                font-family: 'Trebuchet MS';
+            }
+            .editBtn1 {
+                float: right;
+                margin: auto;
+                margin-top: -45px;
+            }
+        }
